--- a/src/components/AdminHeader/AdminHeader.css
+++ b/src/components/AdminHeader/AdminHeader.css
@@ -1,140 +1,69 @@
-.hi-admin2, .welcome-to-fulcrum6 {
-    position: relative;
-    letter-spacing: -0.02em;
-    line-height: 1.59vw
-    }
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
+.hi-admin2,
 .welcome-to-fulcrum6 {
-    font-size: var(--font-size-15xl);
-    line-height: 2.78vw;
-    color: var(--black)
-    }
-.hi-admin-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    font-weight: bold;
-    }
-.carbonsearch-icon4 {
-    position: relative;
-    width: 1.32vw;
-    height: 1.32vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.search-by-anything4 {
-    position: relative;
-    font-weight: light;
-    }
-.carbonsearch-parent2 {
-    width: 25.26vw;
-    flex-direction: row;
-    align-items: center;
-    gap: var(--gap-xs)
-    }
-.carbonsearch-parent2, .frame-wrapper121, .frame-wrapper122 {
-    display: flex;
-    justify-content: flex-start
-    }
-.frame-wrapper122 {
-    border-radius: var(--br-5xs);
-    background-color: var(--white);
-    overflow: hidden;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: var(--padding-base)
-    }
-.frame-wrapper121 {
-    flex-direction: row;
-    align-items: center
-    }
-.vector-icon42, .vector-icon43 {
-    position: absolute;
-    height: 81.01%;
-    width: 82.78%;
-    top: 4.93%;
-    right: 8.75%;
-    bottom: 14.05%;
-    left: 8.47%;
-    max-width: 100%;
-    overflow: hidden;
-    max-height: 100%
-    }
-.vector-icon43 {
-    height: 6.33%;
-    width: 14.61%;
-    top: 88.89%;
-    right: 42.83%;
-    bottom: 4.78%;
-    left: 42.56%
-    }
-.claritynotification-line {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent
-    }
-.claritynotification-line, .fluentinfo-24-regular-icon3 {
-    position: relative;
-    width: 2.12vw;
-    height: 2.12vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.frame-child210 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 50%;
-    background-color: var(--yellow);
-    border: 0.19vw solid var(--color-gray-600);
-    box-sizing: border-box;
-    width: 2.38vw;
-    height: 2.38vw
-    }
-.images-5-icon5 {
-    position: absolute;
-    top: 0.33vw;
-    left: calc(50% - 0.79vw);
-    width: 1.59vw;
-    height: 1.72vw;
-    object-fit: cover
-    }
-.ellipse-parent13 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    position: relative;
-    width: 2.38vw;
-    height: 2.38vw
-    }
- .frame-parent284, .frame-parent285 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-xl);
-    }
-.claritynotification-line-parent2{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-xl);
-    margin-left: 20vw;
+  @apply relative tracking-[-0.02em] leading-[1.59vw];
 }
-.frame-parent284, .frame-parent285 {
-    gap: var(--gap-13xl);
-    color: var(--icon-grey)
-    }
+.welcome-to-fulcrum6 {
+  @apply text-[length:var(--font-size-15xl)] leading-[2.78vw] text-[color:var(--black)];
+}
+.hi-admin-container {
+  @apply flex flex-col items-start justify-start font-[bold];
+}
+.carbonsearch-icon4 {
+  @apply relative w-[1.32vw] h-[1.32vw] overflow-hidden shrink-0;
+}
+.search-by-anything4 {
+  @apply relative font-[light];
+}
+.carbonsearch-parent2 {
+  @apply w-[25.26vw] flex-row items-center gap-[var(--gap-xs)];
+}
+.carbonsearch-parent2,
+.frame-wrapper121,
+.frame-wrapper122 {
+  @apply flex justify-start;
+}
+.frame-wrapper122 {
+  @apply rounded-[var(--br-5xs)] bg-[color:var(--white)] overflow-hidden flex-col items-start pt-[var(--padding-base)] pr-[var(--padding-base)] pb-[var(--padding-base)] pl-[var(--padding-base)];
+}
+.frame-wrapper121 {
+  @apply flex-row items-center;
+}
+.vector-icon42,
+.vector-icon43 {
+  @apply absolute h-[81.01%] w-[82.78%] max-w-full overflow-hidden max-h-full left-[8.47%] right-[8.75%] top-[4.93%] bottom-[14.05%];
+}
+.vector-icon43 {
+  @apply h-[6.33%] w-[14.61%] left-[42.56%] right-[42.83%] top-[88.89%] bottom-[4.78%];
+}
+.claritynotification-line {
+  @apply cursor-pointer bg-transparent p-0 border-0;
+}
+.claritynotification-line,
+.fluentinfo-24-regular-icon3 {
+  @apply relative w-[2.12vw] h-[2.12vw] overflow-hidden shrink-0;
+}
+.frame-child210 {
+  @apply absolute bg-[color:var(--yellow)] border-[color:var(--color-gray-600)] box-border w-[2.38vw] h-[2.38vw] rounded-[50%] border-[0.19vw] border-solid left-0 top-0;
+}
+.images-5-icon5 {
+  @apply absolute left-[calc(50%_-_0.79vw)] w-[1.59vw] h-[1.72vw] object-cover top-[0.33vw];
+}
+.ellipse-parent13 {
+  @apply cursor-pointer bg-transparent relative w-[2.38vw] h-[2.38vw] p-0 border-0;
+}
+.frame-parent284,
+.frame-parent285 {
+  @apply flex flex-row items-center justify-start gap-[var(--gap-xl)] gap-[var(--gap-13xl)] text-[color:var(--icon-grey)];
+}
+.claritynotification-line-parent2 {
+  @apply flex flex-row items-center justify-start gap-[var(--gap-xl)] ml-[20vw];
+}
 .frame-parent284 {
-    position: absolute;
-    top: 2.91vw;
-    left: 21.03vw;
-    gap: var(--gap-227xl);
-    text-align: left;
-    font-size: var(--font-size-base);
-    color: var(--color-darkslategray-200);
-    font-family: var(--font-avenir-lt-std)
-    }
+  @apply absolute gap-[var(--gap-227xl)] text-left text-[length:var(--font-size-base)] text-[color:var(--color-darkslategray-200)] left-[21.03vw] top-[2.91vw];
+  font-family: var(--font-avenir-lt-std);
+}
