--- a/src/pages/ResetPassword/ResetPassword.css
+++ b/src/pages/ResetPassword/ResetPassword.css
@@ -1,111 +1,61 @@
-.fill-your-new-login, .reset-your-password-login {
-  position: relative;
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
+.fill-your-new-login,
+.reset-your-password-login {
+  @apply relative;
 }
 .fill-your-new-login {
-  font-size: var(--font-size-5xl-login);
+  @apply text-[length:var(--font-size-5xl-login)];
 }
 .reset-your-password-parent-login {
-  position: absolute;
-  top: 11.43vw;
-  left: 4.80vw;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-9xs-login);
-  color: var(--color-gray-400-login);
+  @apply absolute flex flex-col items-start justify-start gap-[var(--gap-9xs-login)] text-[color:var(--color-gray-400-login)] left-[4.80vw] top-[11.43vw];
 }
-.frame-child12-login, .new-password-wrapper-login {
-  width: 31.20vw;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
+.frame-child12-login,
+.new-password-wrapper-login {
+  @apply w-[31.20vw] flex flex-row items-center justify-start;
 }
 .frame-child12-login {
-  border: 0.06vw solid var(--color-gainsboro-300-login);
+  @apply border-[color:var(--color-gainsboro-300-login)] text-[length:var(--body-heavy-size-login)] bg-transparent rounded-[var(--br-xs-login)] box-border justify-between pt-[var(--padding-base-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-base-login)] pl-[var(--padding-5xl-login)] border-[0.06vw] border-solid;
   font-family: var(--h1-heavy-login);
-  font-size: var(--body-heavy-size-login);
-  background-color: transparent;
-  border-radius: var(--br-xs-login);
-  box-sizing: border-box;
-  justify-content: space-between;
-  padding: var(--padding-base-login) var(--padding-5xl-login);
 }
-.confirm-new-password-parent-login, .frame-wrapper17-login {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+.confirm-new-password-parent-login,
+.frame-wrapper17-login {
+  @apply flex flex-col items-start justify-start;
 }
 .confirm-new-password-parent-login {
-  gap: var(--gap-5xs-login);
+  @apply gap-[var(--gap-5xs-login)];
 }
-.continue3-login, .frame-parent24-login {
-  font-size: var(--body-heavy-size-login);
+.continue3-login,
+.frame-parent24-login {
+  @apply text-[length:var(--body-heavy-size-login)];
 }
 .frame-parent24-login {
-  position: absolute;
-  top: 18.91vw;
-  left: 4.80vw;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-7xl-login);
+  @apply absolute flex flex-col items-start justify-start gap-[var(--gap-7xl-login)] left-[4.80vw] top-[18.91vw];
 }
 .continue3-login {
-  position: relative;
+  @apply relative text-[color:var(--color-white-login)] text-left;
   font-family: var(--h1-heavy-login);
-  color: var(--color-white-login);
-  text-align: left;
 }
-.continue-wrapper1-login, .frame-wrapper18-login {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: center;
+.continue-wrapper1-login,
+.frame-wrapper18-login {
+  @apply flex flex-row items-end justify-center;
 }
 .frame-wrapper18-login {
-  cursor: pointer;
-  border: 0;
-  padding: var(--padding-xl-login) var(--padding-5xl-login);
-  background-color: var(--purple-login);
-  border-radius: var(--br-xs-login);
-  width: 31.20vw;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
+  @apply cursor-pointer pt-[var(--padding-xl-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-xl-login)] pl-[var(--padding-5xl-login)] bg-[color:var(--purple-login)] rounded-[var(--br-xs-login)] w-[31.20vw] items-center justify-between box-border border-0;
 }
 .sign-in4-login {
-  color: var(--purple-login);
+  @apply text-[color:var(--purple-login)];
 }
 .already-have-an-container4-login {
-  cursor: pointer;
-  text-decoration: none;
-  position: relative;
-  color: inherit;
+  @apply cursor-pointer no-underline relative text-inherit;
 }
 .frame-parent26-login {
-  position: absolute;
-  top: 43.26vw;
-  left: 4.80vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  gap: var(--gap-33xl-login);
-  font-size: var(--font-size-base-login);
+  @apply absolute flex flex-col items-center justify-start gap-[var(--gap-33xl-login)] text-[length:var(--font-size-base-login)] left-[4.80vw] top-[43.26vw];
 }
 .reset-password-login {
-  position: relative;
-  background-color: var(--color-white-login);
-  width: 100%;
-  height: 56.12vw;
-  overflow: hidden;
-  text-align: left;
-  font-size: var(--h1-heavy-size-login);
-  color: var(--black-login);
+  @apply relative bg-[color:var(--color-white-login)] w-full h-[56.12vw] overflow-hidden text-left text-[length:var(--h1-heavy-size-login)] text-[color:var(--black-login)];
   font-family: var(--h1-heavy-login);
 }
-
