--- a/src/components/AddStudentsPopup/AddStudentsPopup.css
+++ b/src/components/AddStudentsPopup/AddStudentsPopup.css
@@ -1,206 +1,171 @@
-.add-students2{
-    position: relative;
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-    font-weight: bold;
-    }
+.add-students {
+  position: relative;
+  letter-spacing: -0.02em;
+  line-height: 2.78vw;
+  font-weight: bold;
+  }
 
-.upload-list-of2 {
-        position: relative;
-        letter-spacing: -0.02em;
-        line-height: 2.78vw;
-    }    
-.upload-list-of2 {
-    font-size: var(--font-size-lg);
-    color: var(--icon-grey);
-    margin-top: -0.53vw
-    }
-.add-students-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.upload-list-of3 {
-    position: relative;
-    font-size: var(--font-size-xl);
-    text-decoration: underline;
-    font-family: var(--font-avenir-lt-std);
-    color: var(--color-dimgray-100);
-    text-align: left
-    }
-.biupload-icon {
-    position: relative;
-    width: 1.12vw;
-    height: 1.12vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.upload-list-of-students-parent {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-xs)
-    }
-.csv-xlsx-json {
-    position: relative;
-    font-size: var(--font-size-sm);
-    font-family: var(--font-avenir-lt-std);
-    color: var(--color-dimgray-100);
-    text-align: left
-    }
-.csv-xlsx-json-file-are-allow-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start
-    }
-.frame-parent28, .frame-wrapper18, .frame-wrapper19 {
-    display: flex;
-    align-items: center;
-    justify-content: center
-    }
-.frame-parent28 {
-    flex-direction: column;
-    gap: var(--gap-5xs)
-    }
-.frame-wrapper18, .frame-wrapper19 {
-    width: 41.01vw
-    }
-.frame-wrapper19 {
-    border-radius: var(--br-xs);
-    border: 0.07vw dashed var(--color-dimgray-100);
-    box-sizing: border-box;
-    height: 7.67vw;
-    flex-direction: row;
-    padding: var(--padding-base) var(--padding-5xl)
-    }
-.frame-wrapper18 {
-    flex-direction: column
-    }
-.frame-wrapper17 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.line-div {
-    border-top: 0.03vw solid var(--color-dimgray-200);
-    box-sizing: border-box;
-    width: 14.72vw;
-    height: 0.03vw
-    }
-.line-div, .or {
-    position: relative
-    }
-.line-parent {
-    border-radius: var(--br-xs);
-    width: 41.01vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: var(--padding-base) var(--padding-5xl);
-    box-sizing: border-box;
-    gap: var(--gap-xl)
-    }
-.icbaseline-plus-icon {
-    position: relative;
-    width: 1.32vw;
-    height: 1.32vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.add-manually {
-    position: relative;
-    font-size: var(--font-size-xl);
-    font-family: var(--font-avenir-lt-std);
-    color: var(--icon-grey);
-    text-align: left
-    }
-.add-manually-wrapper, .frame-wrapper21, .icbaseline-plus-parent {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center
-    }
-.frame-wrapper21, .icbaseline-plus-parent {
-    align-items: center
-    }
-.icbaseline-plus-parent {
-    gap: var(--gap-xs)
-    }
-.frame-wrapper21 {
-    cursor: pointer;
-    border: 0.04vw solid var(--icon-grey);
-    padding: var(--padding-base) var(--padding-5xl);
-    background-color: transparent;
-    border-radius: var(--br-xs);
-    box-sizing: border-box;
-    width: 41.01vw
-    }
-.frame-parent27 {
-    gap: var(--gap-3xs);
-    font-size: var(--font-size-sm);
-    color: #ccc
-    }
-.addstudentspopup-inner, .frame-parent26, .frame-parent27 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.frame-parent26 {
-    gap: var(--gap-lg)
-    }
-.addstudentspopup-inner {
-    position: absolute;
-    top: 2.25vw;
-    left: calc(50% - 20.5vw)
-    }
-.vector-icon7 {
-    position: absolute;
-    height: 34%;
-    width: 34.01%;
-    top: 32.99%;
-    right: 32.99%;
-    bottom: 33%;
-    left: 33%;
-    max-width: 100%;
-    overflow: hidden;
-    max-height: 100%
-    }
-.basilcross-outline5 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    position: absolute;
-    top: 2.12vw;
-    left: 40.34vw;
-    width: 2.12vw;
-    height: 2.12vw;
-    overflow: hidden
-    }
-.addstudentspopup {
-    border-radius: var(--br-base);
-    background-color: var(--white);
-    width: 44.31vw;
-    height: 28.11vw;
-    overflow: hidden;
-    max-width: 100%;
-    max-height: 100%;
-    text-align: left;
-    font-size: 1.56vw;
-    color: var(--black);
-    font-family: var(--font-avenir-lt-std);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%)
-    }
+.upload-list-of {
+      position: relative;
+      letter-spacing: -0.02em;
+      line-height: 2.78vw
+      }    
+.upload-list-of {
+  font-size: var(--font-size-lg);
+  color: var(--icon-grey);
+  margin-top: -0.53vw
+  }
+.add-students-parent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start
+  }
+.phfile-csv-duotone-icon {
+  position: relative;
+  width: 1.32vw;
+  height: 1.26vw;
+  overflow: hidden;
+  flex-shrink: 0
+  }
+.studentcsv {
+  position: relative;
+  text-decoration: underline
+  }
+.studentcsv-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start
+  }
+.vector-icon2 {
+  position: relative;
+  width: 1.32vw;
+  height: 1.32vw
+  }
+.frame-parent21, .phfile-csv-duotone-parent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: var(--gap-5xs)
+  }
+.phfile-csv-duotone-parent {
+  gap: var(--gap-9xs)
+  }
+.students-detected {
+  position: relative;
+  font-size: var(--font-size-sm);
+  color: var(--color-dimgray-100)
+  }
+.frame-parent20, .frame-wrapper12 {
+  display: flex;
+  align-items: center;
+  justify-content: center
+  }
+.frame-parent20 {
+  flex-direction: column;
+  gap: var(--gap-base)
+  }
+.frame-wrapper12 {
+  border-radius: var(--br-xs);
+  border: 0.07vw dashed var(--color-dimgray-100);
+  box-sizing: border-box;
+  width: 41.01vw;
+  height: 7.67vw;
+  flex-direction: row;
+  padding: var(--padding-base) var(--padding-5xl)
+  }
+.frame-wrapper10, .frame-wrapper11 {
+  display: flex;
+  flex-direction: column;
+  align-items: center
+  }
+.frame-wrapper11 {
+  width: 41.01vw;
+  justify-content: center
+  }
+.frame-wrapper10 {
+  justify-content: flex-start
+  }
+.pay-for1200-students {
+  position: relative;
+  font-size: var(--font-size-xl);
+  font-family: var(--font-avenir-lt-std);
+  color: var(--white);
+  text-align: left;
+  font-weight: bold;
+  }
+.pay-for1200-students-wrapper {
+  cursor: pointer;
+  border: 0;
+  padding: var(--padding-base) var(--padding-xl);
+  background-color: var(--purple);
+  border-radius: var(--br-5xs);
+  width: 41.01vw;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box
+  }
+.frame-parent19 {
+  gap: var(--gap-xl);
+  font-size: var(--font-size-xl)
+  }
+.addstudents2popup-inner, .frame-parent18, .frame-parent19 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start
+  }
+.frame-parent18 {
+  gap: var(--gap-lg)
+  }
+.addstudents2popup-inner {
+  position: absolute;
+  top: 2.25vw;
+  left: calc(50% - 20.5vw)
+  }
+.vector-icon3 {
+  position: absolute;
+  height: 34%;
+  width: 34.01%;
+  top: 32.99%;
+  right: 32.99%;
+  bottom: 33%;
+  left: 33%;
+  max-width: 100%;
+  overflow: hidden;
+  max-height: 100%
+  }
+.basilcross-outline2 {
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  position: absolute;
+  top: 2.12vw;
+  left: 40.34vw;
+  width: 2.12vw;
+  height: 2.12vw;
+  overflow: hidden
+  }
+.addstudents2popup {
+  border-radius: var(--br-base);
+  background-color: var(--white);
+  width: 44.31vw;
+  height: 23.21vw;
+  overflow: hidden;
+  max-width: 100%;
+  max-height: 100%;
+  text-align: left;
+  font-size: 1.56vw;
+  color: var(--black);
+  font-family: var(--font-avenir-lt-std);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+  }
