--- a/src/components/AdminNavbar/AdminNavbar.css
+++ b/src/components/AdminNavbar/AdminNavbar.css
@@ -1,155 +1,64 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .cantileverlogoblack-2-icon3 {
-    position: absolute;
-    top: 2.91vw;
-    left: calc(50% - 7.21vw);
-    width: 11.77vw;
-    height: 2.45vw;
-    object-fit: cover
-    }
-.home2 {
-    position: relative;
-    font-size: var(--font-size-xl);
+    @apply absolute left-[calc(50%_-_7.21vw)] w-[11.77vw] h-[2.45vw] object-cover top-[2.91vw];
+  }
+  .home2 {
+    @apply relative text-[length:var(--font-size-xl)] text-[color:var(--icon-grey)] text-left;
     font-family: var(--font-avenir-lt-std);
-    color: var(--icon-grey);
-    text-align: left
-    }
-.phstar-container {
-    position: absolute;
-    top: calc(50% - 0.79vw);
-    left: 2.91vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-base)
-    }
-.frame-wrapper114 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    position: relative;
-    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
-    width: 19.18vw;
-    height: 4.03vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.healthiconsi-exam-multiple-ch {
-    position: relative;
-    width: 1.32vw;
-    height: 1.32vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.tests1 {
-    position: relative;
-    font-size: var(--font-size-xl);
+  }
+  .phstar-container {
+    @apply absolute top-[calc(50%_-_0.79vw)] flex flex-row items-center justify-start gap-[var(--gap-base)] left-[2.91vw];
+  }
+  .frame-wrapper114 {
+    @apply cursor-pointer bg-transparent relative rounded-[0_var(--br-5xs)_var(--br-5xs)_0] w-[19.18vw] h-[4.03vw] overflow-hidden shrink-0 p-0 border-0;
+  }
+  .healthiconsi-exam-multiple-ch {
+    @apply relative w-[1.32vw] h-[1.32vw] overflow-hidden shrink-0;
+  }
+  .tests1 {
+    @apply relative text-[length:var(--font-size-xl)] text-[color:var(--purple)] text-left font-[bold];
     font-family: var(--font-avenir-lt-std);
-    color: var(--purple);
-    text-align: left;
-    font-weight: bold;
-    }
-.frame-child207 {
-    position: absolute;
-    top: calc(50% - 1.69vw);
-    left: calc(50% - 8.8vw);
-    border-radius: var(--br-9xs);
-    background-color: var(--purple);
-    width: 17.59vw;
-    height: 3.44vw;
-    opacity: 0.1
-    }
-.frame-parent277 {
-    position: absolute;
-    top: 8.53vw;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.frame-wrapper116 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    position: absolute;
-    bottom: 2.65vw;
-    left: 0;
-    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
-    width: 19.18vw;
-    height: 4.03vw;
-    overflow: hidden
-    }
-.illustration-item {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 14.68vw;
-    height: 10.65vw
-    }
-.upgrade-to-pro2 {
-    position: relative;
-    font-weight: bold;
-    }
-.get-exclusive-dashboard1 {
-    position: relative;
-    font-size: var(--font-size-sm)
-    }
-.upgrade-to-pro-group {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-5xs)
-    }
-.upgrade-now1 {
-    position: relative;
-    font-size: 1.05vw;
+  }
+  .frame-child207 {
+    @apply absolute top-[calc(50%_-_1.69vw)] left-[calc(50%_-_8.8vw)] rounded-[var(--br-9xs)] bg-[color:var(--purple)] w-[17.59vw] h-[3.44vw] opacity-10;
+  }
+  .frame-parent277 {
+    @apply absolute flex flex-col items-start justify-start left-0 top-[8.53vw];
+  }
+  .frame-wrapper116 {
+    @apply cursor-pointer bg-transparent absolute rounded-[0_var(--br-5xs)_var(--br-5xs)_0] w-[19.18vw] h-[4.03vw] overflow-hidden p-0 border-0 left-0 bottom-[2.65vw];
+  }
+  .illustration-item {
+    @apply absolute w-[14.68vw] h-[10.65vw] left-0 top-0;
+  }
+  .upgrade-to-pro2 {
+    @apply relative font-[bold];
+  }
+  .get-exclusive-dashboard1 {
+    @apply relative text-[length:var(--font-size-sm)];
+  }
+  .upgrade-to-pro-group {
+    @apply flex flex-col items-center justify-start gap-[var(--gap-5xs)];
+  }
+  .upgrade-now1 {
+    @apply relative text-[1.05vw] text-[color:var(--white)] text-left;
     font-family: var(--font-avenir-lt-std);
-    color: var(--white);
-    text-align: left
-    }
-.upgrade-now-container {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-xs) var(--padding-21xl);
-    background-color: var(--purple);
-    border-radius: var(--br-5xs);
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center
-    }
-.frame-parent279 {
-    position: absolute;
-    top: calc(50% - 3.67vw);
-    left: 1.32vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-lgi)
-    }
-.illustration1 {
-    position: absolute;
-    top: 44.58vw;
-    left: 2.25vw;
-    width: 14.68vw;
-    height: 10.52vw
-    }
-.cantileverlogoblack-2-parent1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--white);
-    width: 19.18vw;
-    height: 64.95vw;
-    overflow: hidden;
-    text-align: left;
-    font-size: var(--font-size-xl);
-    color: var(--color-gray-500);
-    font-family: var(--font-avenir-lt-std)
-    }
+  }
+  .upgrade-now-container {
+    @apply cursor-pointer pt-[var(--padding-xs)] pr-[var(--padding-21xl)] pb-[var(--padding-xs)] pl-[var(--padding-21xl)] bg-[color:var(--purple)] rounded-[var(--br-5xs)] overflow-hidden flex flex-row items-center justify-center border-0;
+  }
+  .frame-parent279 {
+    @apply absolute top-[calc(50%_-_3.67vw)] flex flex-col items-center justify-start gap-[var(--gap-lgi)] left-[1.32vw];
+  }
+  .illustration1 {
+    @apply absolute w-[14.68vw] h-[10.52vw] left-[2.25vw] top-[44.58vw];
+  }
+  .cantileverlogoblack-2-parent1 {
+    @apply absolute bg-[color:var(--white)] w-[19.18vw] h-[64.95vw] overflow-hidden text-left text-[length:var(--font-size-xl)] text-[color:var(--color-gray-500)] left-0 top-0;
+    font-family: var(--font-avenir-lt-std);
+  }
+  
