--- a/src/components/CantileverLogo/CantileverLogo.css
+++ b/src/components/CantileverLogo/CantileverLogo.css
@@ -1,8 +1,9 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .cantileverlogoblack-2-icon-login {
-    position: absolute;
-    top: 5.38vw;
-    left: 4.8vw;
-    width: 12.51vw;
-    height: 2.63vw;
-    object-fit: cover
-    }
+    @apply absolute w-[12.51vw] h-[2.63vw] object-cover left-[4.8vw] top-[5.38vw];
+  }
+  
