--- a/src/components/DreamSearchBar/DreamSearchBar.css
+++ b/src/components/DreamSearchBar/DreamSearchBar.css
@@ -1,7 +1,9 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .formBorder {
-  font-size: 3em;
-  display: flex;
-  width: 50vw;
-  align-items: center; /* Align items vertically */
-  justify-content: space-between;
+  @apply text-[3em] flex w-[50vw] items-center justify-between;
+  /* Align items vertically */
 }
