--- a/src/components/GrowthAnalysis2/GrowthAnalysis2.css
+++ b/src/components/GrowthAnalysis2/GrowthAnalysis2.css
@@ -1,31 +1,15 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .my-go-score {
-    position: absolute;
-    top: -0.4vw;
-    left: 1.32vw;
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-    font-weight: bold;
-    margin-top:1.7vw;
-    }
-.number-container {
-    position: absolute;
-    top: 3.54vw;
-    left: 1.19vw;
-    width: 22.16vw;
-    height: 15.26vw;
-    text-align: right;
-    font-size: var(--font-size-3xs-1);
-    color: var(--black);
-    margin-top: 2vw
-    }
-.practice-tests-parent {
-    position: relative;
-    border-radius: var(--br-base);
-    background-color: var(--white);
-    width: 24.6vw;
-    height: 18.12vw;
-    overflow: hidden;
-    flex-shrink: 0;
-    font-size: var(--font-size-5xl)
-
-    }
+    @apply absolute top-[-0.4vw] tracking-[-0.02em] leading-[2.78vw] font-[bold] mt-[1.7vw] left-[1.32vw];
+  }
+  .number-container {
+    @apply absolute w-[22.16vw] h-[15.26vw] text-right text-[length:var(--font-size-3xs-1)] text-[color:var(--black)] mt-[2vw] left-[1.19vw] top-[3.54vw];
+  }
+  .practice-tests-parent {
+    @apply relative rounded-[var(--br-base)] bg-[color:var(--white)] w-[24.6vw] h-[18.12vw] overflow-hidden shrink-0 text-[length:var(--font-size-5xl)];
+  }
+  
