--- a/src/components/InterviewerHeader/InterviewerHeader.css
+++ b/src/components/InterviewerHeader/InterviewerHeader.css
@@ -1,151 +1,76 @@
-.hi-interviewer4, .welcome-to-fulcrum10 {
-    position: relative;
-    letter-spacing: -0.02em;
-    line-height: 1.59vw
-    }
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
+.hi-interviewer4,
 .welcome-to-fulcrum10 {
-    font-size: var(--font-size-15xl);
-    line-height: 2.78vw;
-    color: var(--black)
-    }
+  @apply relative tracking-[-0.02em] leading-[1.59vw];
+}
+.welcome-to-fulcrum10 {
+  @apply text-[length:var(--font-size-15xl)] leading-[2.78vw] text-[color:var(--black)];
+}
 .hi-interviewer-parent2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    font-weight: bold;
-    }
+  @apply flex flex-col items-start justify-start font-[bold];
+}
 .carbonsearch-icon8 {
-    position: relative;
-    width: 1.32vw;
-    height: 1.32vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
+  @apply relative w-[1.32vw] h-[1.32vw] overflow-hidden shrink-0;
+}
 .search-by-anything8 {
-    position: relative;
-    font-weight: light;
-    }
+  @apply relative font-[light];
+}
 .carbonsearch-parent6 {
-    width: 25.26vw;
-    flex-direction: row;
-    align-items: center;
-    gap: var(--gap-xs)
-    }
-.carbonsearch-parent6, .frame-wrapper141, .frame-wrapper142 {
-    display: flex;
-    justify-content: flex-start
-    }
+  @apply w-[25.26vw] flex-row items-center gap-[var(--gap-xs)];
+}
+.carbonsearch-parent6,
+.frame-wrapper141,
 .frame-wrapper142 {
-    border-radius: var(--br-5xs);
-    background-color: var(--white);
-    overflow: hidden;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: var(--padding-base)
-    }
+  @apply flex justify-start;
+}
+.frame-wrapper142 {
+  @apply rounded-[var(--br-5xs)] bg-[color:var(--white)] overflow-hidden flex-col items-start pt-[var(--padding-base)] pr-[var(--padding-base)] pb-[var(--padding-base)] pl-[var(--padding-base)];
+}
 .frame-wrapper141 {
-    flex-direction: row;
-    align-items: center
-    }
-.vector-icon45, .vector-icon46 {
-    position: absolute;
-    height: 81.01%;
-    width: 82.78%;
-    top: 4.93%;
-    right: 8.75%;
-    bottom: 14.05%;
-    left: 8.47%;
-    max-width: 100%;
-    overflow: hidden;
-    max-height: 100%
-    }
+  @apply flex-row items-center;
+}
+.vector-icon45,
 .vector-icon46 {
-    height: 6.33%;
-    width: 14.61%;
-    top: 88.89%;
-    right: 42.83%;
-    bottom: 4.78%;
-    left: 42.56%
-    }
+  @apply absolute h-[81.01%] w-[82.78%] max-w-full overflow-hidden max-h-full left-[8.47%] right-[8.75%] top-[4.93%] bottom-[14.05%];
+}
+.vector-icon46 {
+  @apply h-[6.33%] w-[14.61%] left-[42.56%] right-[42.83%] top-[88.89%] bottom-[4.78%];
+}
 .claritynotification-line1 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    position: relative;
-    width: 2.12vw;
-    height: 2.12vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
+  @apply cursor-pointer bg-transparent relative w-[2.12vw] h-[2.12vw] overflow-hidden shrink-0 p-0 border-0;
+}
 .icround-star-icon4 {
-    position: relative;
-    width: 1.85vw;
-    height: 1.85vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
+  @apply relative w-[1.85vw] h-[1.85vw] overflow-hidden shrink-0;
+}
 .div194 {
-    position: relative;
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-    font-weight: bold;
-    }
+  @apply relative tracking-[-0.02em] leading-[2.78vw] font-[bold];
+}
 .icround-star-parent2 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-9xs)
-    }
+  @apply flex flex-row items-center justify-start gap-[var(--gap-9xs)];
+}
 .frame-child218 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 50%;
-    background-color: var(--yellow);
-    border: 0.19vw solid var(--color-gray-600);
-    box-sizing: border-box;
-    width: 2.38vw;
-    height: 2.38vw
-    }
+  @apply absolute bg-[color:var(--yellow)] border-[color:var(--color-gray-600)] box-border w-[2.38vw] h-[2.38vw] rounded-[50%] border-[0.19vw] border-solid left-0 top-0;
+}
 .images-5-icon9 {
-    position: absolute;
-    top: 0.33vw;
-    left: calc(50% - 0.79vw);
-    width: 1.59vw;
-    height: 1.72vw;
-    object-fit: cover
-    }
+  @apply absolute left-[calc(50%_-_0.79vw)] w-[1.59vw] h-[1.72vw] object-cover top-[0.33vw];
+}
 .ellipse-parent17 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    position: relative;
-    width: 2.38vw;
-    height: 2.38vw
-    }
-.claritynotification-line-parent6, .frame-parent297, .frame-parent298 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-base);
-    color: var(--black)
-    }
-.frame-parent297, .frame-parent298 {
-    gap: var(--gap-13xl);
-    color: var(--icon-grey)
-    }
+  @apply cursor-pointer bg-transparent relative w-[2.38vw] h-[2.38vw] p-0 border-0;
+}
+.claritynotification-line-parent6,
+.frame-parent297,
+.frame-parent298 {
+  @apply flex flex-row items-center justify-start gap-[var(--gap-base)] text-[color:var(--black)];
+}
+.frame-parent297,
+.frame-parent298 {
+  @apply gap-[var(--gap-13xl)] text-[color:var(--icon-grey)];
+}
 .frame-parent297 {
-    position: absolute;
-    top: 2.91vw;
-    left: 21.03vw;
-    gap: var(--gap-215xl);
-    text-align: left;
-    font-size: var(--font-size-base);
-    color: var(--color-darkslategray-200);
-    font-family: var(--font-avenir-lt-std)
-    }
+  @apply absolute gap-[var(--gap-215xl)] text-left text-[length:var(--font-size-base)] text-[color:var(--color-darkslategray-200)] left-[21.03vw] top-[2.91vw];
+  font-family: var(--font-avenir-lt-std);
+}
