--- a/src/components/InterviewerNavbar/InterviewerNavbar.css
+++ b/src/components/InterviewerNavbar/InterviewerNavbar.css
@@ -1,97 +1,49 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .cantileverlogoblack-2-icon8 {
-    position: absolute;
-    top: 2.91vw;
-    left: calc(50% - 7.21vw);
-    width: 11.77vw;
-    height: 2.45vw;
-    object-fit: cover
-    }
-.frame-child217 {
-    position: absolute;
-    top: calc(50% - 1.69vw);
-    left: calc(50% - 8.8vw);
-    border-radius: var(--br-9xs);
-    background-color: var(--purple);
-    width: 17.59vw;
-    height: 3.44vw;
-    opacity: 0.1
-    }
-.teenyiconshome-solid2 {
-    position: relative;
-    width: 0.99vw;
-    height: 0.99vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.home7 {
-    position: relative;
-    font-size: var(--font-size-xl);
+    @apply absolute left-[calc(50%_-_7.21vw)] w-[11.77vw] h-[2.45vw] object-cover top-[2.91vw];
+  }
+  .frame-child217 {
+    @apply absolute top-[calc(50%_-_1.69vw)] left-[calc(50%_-_8.8vw)] rounded-[var(--br-9xs)] bg-[color:var(--purple)] w-[17.59vw] h-[3.44vw] opacity-10;
+  }
+  .teenyiconshome-solid2 {
+    @apply relative w-[0.99vw] h-[0.99vw] overflow-hidden shrink-0;
+  }
+  .home7 {
+    @apply relative text-[length:var(--font-size-xl)] text-[color:var(--purple)] text-left font-[bold];
     font-family: var(--font-avenir-lt-std);
-    color: var(--purple);
-    text-align: left;
-    font-weight: bold;
-    }
-.transaction5 {
-    position: relative;
-    font-size: var(--font-size-xl);
+  }
+  .transaction5 {
+    @apply relative text-[length:var(--font-size-xl)] text-[color:var(--icon-grey)] text-left;
     font-family: var(--font-avenir-lt-std);
-    color: var(--icon-grey);
-    text-align: left
-    }
-.teenyiconshome-solid-container {
-    position: absolute;
-    top: calc(50% - 0.79vw);
-    left: 2.91vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-base)
-    }
-.grommet-iconstransaction4, .rectangle-parent9 {
-    position: relative;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.rectangle-parent9 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
-    width: 19.18vw;
-    height: 4.03vw
-    }
-.grommet-iconstransaction4 {
-    width: 1.32vw;
-    height: 1.32vw
-    }
-.frame-parent296 {
-    position: absolute;
-    top: 8.53vw;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.cantileverlogoblack-2-parent6, .frame-wrapper140 {
-    position: absolute;
-    left: 0;
-    width: 19.18vw;
-    overflow: hidden
-    }
-.frame-wrapper140 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    bottom: 2.65vw;
-    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
-    height: 4.03vw
-    }
-.cantileverlogoblack-2-parent6 {
-    top: 0;
-    background-color: var(--white);
-    height: 64.95vw
-    }
+  }
+  .teenyiconshome-solid-container {
+    @apply absolute top-[calc(50%_-_0.79vw)] flex flex-row items-center justify-start gap-[var(--gap-base)] left-[2.91vw];
+  }
+  .grommet-iconstransaction4,
+  .rectangle-parent9 {
+    @apply relative overflow-hidden shrink-0;
+  }
+  .rectangle-parent9 {
+    @apply cursor-pointer bg-transparent rounded-[0_var(--br-5xs)_var(--br-5xs)_0] w-[19.18vw] h-[4.03vw] p-0 border-0;
+  }
+  .grommet-iconstransaction4 {
+    @apply w-[1.32vw] h-[1.32vw];
+  }
+  .frame-parent296 {
+    @apply absolute flex flex-col items-start justify-start left-0 top-[8.53vw];
+  }
+  .cantileverlogoblack-2-parent6,
+  .frame-wrapper140 {
+    @apply absolute w-[19.18vw] overflow-hidden left-0;
+  }
+  .frame-wrapper140 {
+    @apply cursor-pointer bg-transparent rounded-[0_var(--br-5xs)_var(--br-5xs)_0] h-[4.03vw] p-0 border-0 bottom-[2.65vw];
+  }
+  .cantileverlogoblack-2-parent6 {
+    @apply bg-[color:var(--white)] h-[64.95vw] top-0;
+  }
+  
