--- a/src/components/InterviewerSettingsPane/InterviewerSettingsPane.css
+++ b/src/components/InterviewerSettingsPane/InterviewerSettingsPane.css
@@ -1,9 +1,3 @@
 .frame-child203 {
-    position: absolute;
-    top: calc(50% - 24.34vw);
-    left: 0;
-    background-color: var(--white);
-    box-shadow: 0.07vw 0 0.26vw rgba(0, 0, 0, 0.15);
-    width: 17.33vw;
-    height: 48.68vw
-    }
+    @apply absolute top-[calc(50%_-_24.34vw)] bg-[color:var(--white)] shadow-[0.07vw_0_0.26vw_rgba(0,0,0,0.15)] w-[17.33vw] h-[48.68vw] left-0;
+  }
