--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,223 +1,92 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .cantileverlogoblack-2-icon21 {
-    position: absolute;
-    top: 2.91vw;
-    left: calc(50% - 7.21vw);
-    width: 11.77vw;
-    height: 2.45vw;
-    object-fit: cover
-    }
-.phstar-icon15 {
-    position: relative;
-    width: 1.32vw;
-    height: 1.32vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.my-go-score15 {
-    position: relative;
-    font-size: var(--font-size-xl);
+    @apply absolute left-[calc(50%_-_7.21vw)] w-[11.77vw] h-[2.45vw] object-cover top-[2.91vw];
+  }
+  .phstar-icon15 {
+    @apply relative w-[1.32vw] h-[1.32vw] overflow-hidden shrink-0;
+  }
+  .my-go-score15 {
+    @apply relative text-[length:var(--font-size-xl)] text-[color:var(--purple)] text-left font-[bold];
     font-family: var(--font-avenir-lt-std);
-    color: var(--purple);
-    text-align: left;
-    font-weight: bold
-    }
-.phstar-parent13 {
-    position: absolute;
-    top: calc(50% - 0.79vw);
-    left: 2.91vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-base)
-    }
-.frame-child251 {
-    position: absolute;
-    top: calc(50% - 1.69vw);
-    left: calc(50% - 8.8vw);
-    border-radius: var(--br-9xs);
-    width: 17.59vw;
-    height: 3.44vw;
-    opacity: 0.1
-    }
-.frame-parent366 {
-    position: relative;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.frame-parent366select {
-    position: relative;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.frame-parent366 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
-    width: 19.18vw;
-    height: 4.03vw
-    }
-.frame-parent366select {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: #efefff;
-    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
-    width: 19.18vw;
-    height: 4.03vw
-    }
-.interviews16 {
-    position: relative;
-    font-size: var(--font-size-xl);
+  }
+  .phstar-parent13 {
+    @apply absolute top-[calc(50%_-_0.79vw)] flex flex-row items-center justify-start gap-[var(--gap-base)] left-[2.91vw];
+  }
+  .frame-child251 {
+    @apply absolute top-[calc(50%_-_1.69vw)] left-[calc(50%_-_8.8vw)] rounded-[var(--br-9xs)] w-[17.59vw] h-[3.44vw] opacity-10;
+  }
+  .frame-parent366 {
+    @apply relative overflow-hidden shrink-0 cursor-pointer bg-transparent rounded-[0_var(--br-5xs)_var(--br-5xs)_0] w-[19.18vw] h-[4.03vw] p-0 border-0;
+  }
+  .frame-parent366select {
+    @apply relative overflow-hidden shrink-0 cursor-pointer bg-[#efefff] rounded-[0_var(--br-5xs)_var(--br-5xs)_0] w-[19.18vw] h-[4.03vw] p-0 border-0;
+  }
+  .interviews16 {
+    @apply relative text-[length:var(--font-size-xl)] text-[color:var(--icon-grey)] text-left;
     font-family: var(--font-avenir-lt-std);
-    color: var(--icon-grey);
-    text-align: left
-    }
-.frame-parent365 {
-    position: absolute;
-    top: 8.53vw;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.frame-wrapper225 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    position: absolute;
-    bottom: 2.65vw;
-    left: 0;
-    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
-    width: 19.18vw;
-    height: 4.03vw;
-    overflow: hidden
-    }
-.lauser-friends-icon {
-    position: relative;
-    width: 2.12vw;
-    height: 2.12vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.refer-and-earn {
-    position: relative;
-    font-size: var(--font-size-base);
-    letter-spacing: -0.02em;
-    line-height: 1.59vw;
+  }
+  .frame-parent365 {
+    @apply absolute flex flex-col items-start justify-start left-0 top-[8.53vw];
+  }
+  .frame-wrapper225 {
+    @apply cursor-pointer bg-transparent absolute rounded-[0_var(--br-5xs)_var(--br-5xs)_0] w-[19.18vw] h-[4.03vw] overflow-hidden p-0 border-0 left-0 bottom-[2.65vw];
+  }
+  .lauser-friends-icon {
+    @apply relative w-[2.12vw] h-[2.12vw] overflow-hidden shrink-0;
+  }
+  .refer-and-earn {
+    @apply relative text-[length:var(--font-size-base)] tracking-[-0.02em] leading-[1.59vw] text-[color:var(--color-darkslategray-100)] text-left font-[bold];
     font-family: var(--font-avenir-lt-std);
-    color: var(--color-darkslategray-100);
-    text-align: left;
-    font-weight: bold
-    }
-.refer-and-earn1 {
-    position: relative;
-    font-size: var(--font-size-base);
-    letter-spacing: -0.02em;
-    line-height: 1.59vw;
+  }
+  .refer-and-earn1 {
+    @apply relative text-[length:var(--font-size-base)] tracking-[-0.02em] leading-[1.59vw] text-[color:var(--color-darkslategray-100)] text-left;
     font-family: var(--font-avenir-lt-std);
-    color: var(--color-darkslategray-100);
-    text-align: left
-    }
-.frame-wrapper226, .lauser-friends-parent, .refer-and-earn-parent {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.lauser-friends-parent {
-    gap: var(--gap-3xs)
-    }
-.frame-wrapper226 {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-base) var(--padding-sm);
-    background-color: var(--color-lavender);
-    border-radius: var(--br-xs);
-    width: 14.68vw;
-    overflow: hidden;
-    box-sizing: border-box
-    }
-.illustration-child13 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 14.68vw;
-    height: 10.65vw
-    }
-.upgrade-to-pro16 {
-    position: relative;
-    font-weight: bold
-    }
-.get-exclusive-dashboard15 {
-    position: relative;
-    font-size: var(--font-size-sm)
-    }
-.upgrade-to-pro-parent13 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-5xs)
-    }
-.upgrade-now15 {
-    position: relative;
-    font-size: 1.05vw;
+  }
+  .frame-wrapper226,
+  .lauser-friends-parent,
+  .refer-and-earn-parent {
+    @apply flex flex-col items-start justify-start;
+  }
+  .lauser-friends-parent {
+    @apply gap-[var(--gap-3xs)];
+  }
+  .frame-wrapper226 {
+    @apply cursor-pointer pt-[var(--padding-base)] pr-[var(--padding-sm)] pb-[var(--padding-base)] pl-[var(--padding-sm)] bg-[color:var(--color-lavender)] rounded-[var(--br-xs)] w-[14.68vw] overflow-hidden box-border border-0;
+  }
+  .illustration-child13 {
+    @apply absolute w-[14.68vw] h-[10.65vw] left-0 top-0;
+  }
+  .upgrade-to-pro16 {
+    @apply relative font-[bold];
+  }
+  .get-exclusive-dashboard15 {
+    @apply relative text-[length:var(--font-size-sm)];
+  }
+  .upgrade-to-pro-parent13 {
+    @apply flex flex-col items-center justify-start gap-[var(--gap-5xs)];
+  }
+  .upgrade-now15 {
+    @apply relative text-[1.05vw] text-[color:var(--white)] text-left;
     font-family: var(--font-avenir-lt-std);
-    color: var(--white);
-    text-align: left
-    }
-.upgrade-now-wrapper13 {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-xs) var(--padding-21xl);
-    background-color: var(--purple);
-    border-radius: var(--br-5xs);
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center
-    }
-.frame-parent368 {
-    position: absolute;
-    top: calc(50% - 3.67vw);
-    left: 1.32vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-lgi)
-    }
-.illustration15 {
-    position: relative;
-    width: 14.68vw;
-    height: 10.52vw
-    }
-.frame-parent367 {
-    position: absolute;
-    top: 35.12vw;
-    left: 2.25vw;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-xl)
-    }
-.cantileverlogoblack-2-parent19 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--white);
-    width: 19.18vw;
-    height: 64.95vw;
-    overflow: hidden;
-    text-align: left;
-    font-size: var(--font-size-xl);
-    color: var(--black);
-    font-family: var(--font-avenir-lt-std)
-    }
+  }
+  .upgrade-now-wrapper13 {
+    @apply cursor-pointer pt-[var(--padding-xs)] pr-[var(--padding-21xl)] pb-[var(--padding-xs)] pl-[var(--padding-21xl)] bg-[color:var(--purple)] rounded-[var(--br-5xs)] overflow-hidden flex flex-row items-center justify-center border-0;
+  }
+  .frame-parent368 {
+    @apply absolute top-[calc(50%_-_3.67vw)] flex flex-col items-center justify-start gap-[var(--gap-lgi)] left-[1.32vw];
+  }
+  .illustration15 {
+    @apply relative w-[14.68vw] h-[10.52vw];
+  }
+  .frame-parent367 {
+    @apply absolute flex flex-col items-start justify-start gap-[var(--gap-xl)] left-[2.25vw] top-[35.12vw];
+  }
+  .cantileverlogoblack-2-parent19 {
+    @apply absolute bg-[color:var(--white)] w-[19.18vw] h-[64.95vw] overflow-hidden text-left text-[length:var(--font-size-xl)] text-[color:var(--black)] left-0 top-0;
+    font-family: var(--font-avenir-lt-std);
+  }
+  
