--- a/src/components/OverallAnalysis/OverallAnalysis.css
+++ b/src/components/OverallAnalysis/OverallAnalysis.css
@@ -1,33 +1,11 @@
 .overall-analysis {
-    position: absolute;
-    top: 1.32vw;
-    left: 1.32vw;
-    font-size: 1.59vw;
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-    color: #353535;
-    margin-top: 0.5vw;
-    font-weight: bold
-    }
-.parent2 {
-    position: relative;
-    border-radius: 1.06vw;
-    background-color: #fff;
-    width: 34.5vw;
-    height: 24.88vw;
-    overflow: hidden;
-    flex-shrink: 0;
-    text-align: left;
-    font-size: 0.66vw;
-    color: #1d2129;
+    @apply absolute text-[1.59vw] tracking-[-0.02em] leading-[2.78vw] text-[#353535] font-[bold] mt-[0.5vw] left-[1.32vw] top-[1.32vw];
+  }
+  .parent2 {
+    @apply relative bg-white w-[34.5vw] h-[24.88vw] overflow-hidden shrink-0 text-left text-[0.66vw] text-[#1d2129] ml-[0.4vw] rounded-[1.06vw];
     font-family: "Avenir LT Std";
-    margin-left: 0.4vw
-    }
-.pentagon-chart-container {
-    width: 40.32vw;
-    height: 25.88vw;
-    align-items: center;
-    margin-top: 5vw;
-    margin-bottom: 2vw;
-    margin-left: -2vw
-    }
+  }
+  .pentagon-chart-container {
+    @apply w-[40.32vw] h-[25.88vw] items-center ml-[-2vw] mt-[5vw] mb-[2vw];
+  }
+  
