--- a/src/components/ResetLinkSent/ResetLinkSent.css
+++ b/src/components/ResetLinkSent/ResetLinkSent.css
@@ -1,107 +1,62 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .vector-icon-login {
-    width: 5.15vw;
-    height: 5.15vw
-    }
-.reset-link-sent1-login, .vector-icon-login {
-    position: relative
-    }
-.reset-link-sent-wrapper-login {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.check-your-mail-login {
-    position: relative;
-    font-size: var(--font-size-5xl-login)
-    }
-.frame-parent14-login {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-9xs-login)
-    }
-.teenyiconstick-circle-solid-login {
-    position: relative;
-    width: 4.06vw;
-    height: 4.06vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.vector-parent-login {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-32xl-login)
-    }
-.proceed-to-login-login {
-    position: relative;
-    font-size: var(--body-heavy-size-login);
+    @apply w-[5.15vw] h-[5.15vw];
+  }
+  .reset-link-sent1-login,
+  .vector-icon-login {
+    @apply relative;
+  }
+  .reset-link-sent-wrapper-login {
+    @apply flex flex-row items-start justify-start;
+  }
+  .check-your-mail-login {
+    @apply relative text-[length:var(--font-size-5xl-login)];
+  }
+  .frame-parent14-login {
+    @apply flex flex-col items-start justify-start gap-[var(--gap-9xs-login)];
+  }
+  .teenyiconstick-circle-solid-login {
+    @apply relative w-[4.06vw] h-[4.06vw] overflow-hidden shrink-0;
+  }
+  .vector-parent-login {
+    @apply flex flex-col items-start justify-start gap-[var(--gap-32xl-login)];
+  }
+  .proceed-to-login-login {
+    @apply relative text-[length:var(--body-heavy-size-login)] text-[color:var(--color-white-login)] text-left;
     font-family: var(--h1-heavy-login);
-    color: var(--color-white-login);
-    text-align: left
-    }
-.frame-wrapper9-login, .proceed-to-login-wrapper-login {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center
-    }
-.frame-wrapper9-login {
-    border-radius: var(--br-xs-login);
-    background-color: var(--purple-login);
-    width: 31.2vw;
-    align-items: center;
-    justify-content: space-between;
-    padding: var(--padding-xl-login) var(--padding-5xl-login);
-    box-sizing: border-box
-    }
-.frame-wrapper8-login {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start
-    }
-.sign-up-for1-login {
-    color: var(--purple-login)
-    }
-.new-to-fulcrum-container1-login {
-    cursor: pointer;
-    text-decoration: none;
-    position: relative;
-    color: inherit
-    }
-.frame-parent13-login, .frame-parent15-login {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: var(--gap-53xl-login)
-    }
-.frame-parent15-login {
-    align-items: center;
-    font-size: var(--font-size-base-login);
-    color: var(--black-login)
-    }
-.frame-parent13-login {
-    position: absolute;
-    top: 16.57vw;
-    left: 4.8vw;
-    align-items: flex-start
-    }
-.reset-link-sent-login {
-    position: relative;
-    background-color: var(--color-white-login);
-    width: 100%;
-    height: 56.12vw;
-    overflow: hidden;
-    text-align: left;
-    font-size: var(--h1-heavy-size-login);
-    color: var(--color-gray-400-login);
-    font-family: var(--h1-heavy-login)
-    }
+  }
+  .frame-wrapper9-login,
+  .proceed-to-login-wrapper-login {
+    @apply flex flex-row items-end justify-center;
+  }
+  .frame-wrapper9-login {
+    @apply rounded-[var(--br-xs-login)] bg-[color:var(--purple-login)] w-[31.2vw] items-center justify-between pt-[var(--padding-xl-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-xl-login)] pl-[var(--padding-5xl-login)] box-border;
+  }
+  .frame-wrapper8-login {
+    @apply cursor-pointer bg-transparent flex flex-col items-center justify-start p-0 border-0;
+  }
+  .sign-up-for1-login {
+    @apply text-[color:var(--purple-login)];
+  }
+  .new-to-fulcrum-container1-login {
+    @apply cursor-pointer no-underline relative text-inherit;
+  }
+  .frame-parent13-login,
+  .frame-parent15-login {
+    @apply flex flex-col justify-start gap-[var(--gap-53xl-login)];
+  }
+  .frame-parent15-login {
+    @apply items-center text-[length:var(--font-size-base-login)] text-[color:var(--black-login)];
+  }
+  .frame-parent13-login {
+    @apply absolute items-start left-[4.8vw] top-[16.57vw];
+  }
+  .reset-link-sent-login {
+    @apply relative bg-[color:var(--color-white-login)] w-full h-[56.12vw] overflow-hidden text-left text-[length:var(--h1-heavy-size-login)] text-[color:var(--color-gray-400-login)];
+    font-family: var(--h1-heavy-login);
+  }
+  
