--- a/src/components/SignUpAsIndividual3/SignUpAsIndividual3.css
+++ b/src/components/SignUpAsIndividual3/SignUpAsIndividual3.css
@@ -1,108 +1,56 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .just-a-few1-login {
-    position: relative;
-    font-size: var(--font-size-5xl-login)
-    }
-.your-profile-is-almost-ready-group-login {
-    position: absolute;
-    top: 11.43vw;
-    left: 4.8vw;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-9xs-login);
-    color: var(--color-gray-400-login)
-    }
-.enter-your-skills-login {
-    position: relative;
-    margin-bottom: 0.2vw
-    }
-.frame-select1-login {
-    border-radius: var(--br-xs-login);
-    border: 0.06vw solid var(--color-gainsboro-300-login);
-    box-sizing: border-box;
-    width: 31.2vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    padding: var(--padding-base-login) var(--padding-5xl-login)
-    }
-.enter-your-skills-parent-login {
-    gap: var(--gap-5xs-login)
-    }
-.enter-your-skills-parent-login, .frame-wrapper33-login {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.frame-parent48-login, .next1-login {
-    font-size: var(--body-heavy-size-login)
-    }
-
-.frame-parent48-login {
-    position: absolute;
-    top: 16.91vw;
-    left: 4.8vw;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-7xl-login)
-    }
-.next1-login {
-    position: relative;
+    @apply relative text-[length:var(--font-size-5xl-login)];
+  }
+  .your-profile-is-almost-ready-group-login {
+    @apply absolute flex flex-col items-start justify-start gap-[var(--gap-9xs-login)] text-[color:var(--color-gray-400-login)] left-[4.8vw] top-[11.43vw];
+  }
+  .enter-your-skills-login {
+    @apply relative mb-[0.2vw];
+  }
+  .frame-select1-login {
+    @apply rounded-[var(--br-xs-login)] border-[color:var(--color-gainsboro-300-login)] box-border w-[31.2vw] flex flex-row items-center justify-start pt-[var(--padding-base-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-base-login)] pl-[var(--padding-5xl-login)] border-[0.06vw] border-solid;
+  }
+  .enter-your-skills-parent-login {
+    @apply gap-[var(--gap-5xs-login)];
+  }
+  .enter-your-skills-parent-login,
+  .frame-wrapper33-login {
+    @apply flex flex-col items-start justify-start;
+  }
+  .frame-parent48-login,
+  .next1-login {
+    @apply text-[length:var(--body-heavy-size-login)];
+  }
+  .frame-parent48-login {
+    @apply absolute flex flex-col items-start justify-start gap-[var(--gap-7xl-login)] left-[4.8vw] top-[16.91vw];
+  }
+  .next1-login {
+    @apply relative text-[color:var(--color-white-login)] text-left;
     font-family: var(--h1-heavy-login);
-    color: var(--color-white-login);
-    text-align: left
-    }
-.frame-wrapper36-login, .next-container-login {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center
-    }
-.frame-wrapper36-login {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-xl-login) var(--padding-5xl-login);
-    background-color: var(--purple-login);
-    border-radius: var(--br-xs-login);
-    width: 31.2vw;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box
-    }
-.sign-in9-login {
-    color: var(--purple-login)
-    }
-.already-have-an-container9-login {
-    cursor: pointer;
-    text-decoration: none;
-    position: relative;
-    color: inherit;
-    margin-top: -2vw;
-    }
-.frame-parent49-login {
-    position: absolute;
-    top: 46.8vw;
-    left: 4.8vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-33xl-login);
-    font-size: var(--font-size-base-login)
-    }
-.sign-up-as-individual3-login {
-    position: relative;
-    background-color: var(--color-white-login);
-    width: 100%;
-    height: 56.12vw;
-    overflow: hidden;
-    text-align: left;
-    font-size: var(--h1-heavy-size-login);
-    color: var(--black-login);
-    font-family: var(--h1-heavy-login)
-    }
+  }
+  .frame-wrapper36-login,
+  .next-container-login {
+    @apply flex flex-row items-end justify-center;
+  }
+  .frame-wrapper36-login {
+    @apply cursor-pointer pt-[var(--padding-xl-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-xl-login)] pl-[var(--padding-5xl-login)] bg-[color:var(--purple-login)] rounded-[var(--br-xs-login)] w-[31.2vw] items-center justify-between box-border border-0;
+  }
+  .sign-in9-login {
+    @apply text-[color:var(--purple-login)];
+  }
+  .already-have-an-container9-login {
+    @apply cursor-pointer no-underline relative text-inherit mt-[-2vw];
+  }
+  .frame-parent49-login {
+    @apply absolute flex flex-col items-center justify-start gap-[var(--gap-33xl-login)] text-[length:var(--font-size-base-login)] left-[4.8vw] top-[46.8vw];
+  }
+  .sign-up-as-individual3-login {
+    @apply relative bg-[color:var(--color-white-login)] w-full h-[56.12vw] overflow-hidden text-left text-[length:var(--h1-heavy-size-login)] text-[color:var(--black-login)];
+    font-family: var(--h1-heavy-login);
+  }
+  
