--- a/src/components/SignUpAsInstitute1/SignUpAsInstitute1.css
+++ b/src/components/SignUpAsInstitute1/SignUpAsInstitute1.css
@@ -1,106 +1,54 @@
-.frame-child21-login, .phone-no-group-login {
-    display: flex;
-    justify-content: flex-start
-    }
-.frame-child21-login {
-    border: 0.06vw solid var(--color-gainsboro-300-login);
-    font-family: var(--h1-heavy-login);
-    font-size: var(--body-heavy-size-login);
-    background-color: transparent;
-    border-radius: var(--br-xs-login);
-    box-sizing: border-box;
-    width: 31.2vw;
-    flex-direction: row;
-    align-items: center;
-    padding: var(--padding-base-login) var(--padding-5xl-login)
-    }
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
+.frame-child21-login,
 .phone-no-group-login {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: var(--gap-5xs-login)
-    }
+  @apply flex justify-start;
+}
+.frame-child21-login {
+  @apply border-[color:var(--color-gainsboro-300-login)] text-[length:var(--body-heavy-size-login)] bg-transparent rounded-[var(--br-xs-login)] box-border w-[31.2vw] flex-row items-center pt-[var(--padding-base-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-base-login)] pl-[var(--padding-5xl-login)] border-[0.06vw] border-solid;
+  font-family: var(--h1-heavy-login);
+}
+.phone-no-group-login {
+  @apply flex-col items-start gap-[var(--gap-5xs-login)];
+}
 .institute-address-login {
-    position: relative
-    }
+  @apply relative;
+}
 .frame-child22-login {
-    border: 0.06vw solid var(--color-gainsboro-300-login);
-    font-family: var(--h1-heavy-login);
-    font-size: var(--body-heavy-size-login);
-    background-color: transparent;
-    border-radius: var(--br-xs-login);
-    box-sizing: border-box;
-    width: 31.2vw;
-    height: 3.2vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: var(--padding-base-login) var(--padding-5xl-login)
-    }
-.frame-parent41-login, .frame-wrapper27-login {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
+  @apply border-[color:var(--color-gainsboro-300-login)] text-[length:var(--body-heavy-size-login)] bg-transparent rounded-[var(--br-xs-login)] box-border w-[31.2vw] h-[3.2vw] flex flex-row items-center justify-between pt-[var(--padding-base-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-base-login)] pl-[var(--padding-5xl-login)] border-[0.06vw] border-solid;
+  font-family: var(--h1-heavy-login);
+}
+.frame-parent41-login,
+.frame-wrapper27-login {
+  @apply flex flex-col items-start justify-start;
+}
 .frame-parent41-login {
-    position: absolute;
-    top: 18.91vw;
-    left: 4.8vw;
-    gap: var(--gap-7xl-login)
-    }
+  @apply absolute gap-[var(--gap-7xl-login)] left-[4.8vw] top-[18.91vw];
+}
 .continue5-login {
-    position: relative;
-    font-size: var(--body-heavy-size-login);
-    font-family: var(--h1-heavy-login);
-    color: var(--color-white-login);
-    text-align: left
-    }
-.continue-wrapper3-login, .frame-wrapper28-login {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center
-    }
+  @apply relative text-[length:var(--body-heavy-size-login)] text-[color:var(--color-white-login)] text-left;
+  font-family: var(--h1-heavy-login);
+}
+.continue-wrapper3-login,
 .frame-wrapper28-login {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-xl-login) var(--padding-5xl-login);
-    background-color: var(--purple-login);
-    border-radius: var(--br-xs-login);
-    width: 31.2vw;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box
-    }
+  @apply flex flex-row items-end justify-center;
+}
+.frame-wrapper28-login {
+  @apply cursor-pointer pt-[var(--padding-xl-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-xl-login)] pl-[var(--padding-5xl-login)] bg-[color:var(--purple-login)] rounded-[var(--br-xs-login)] w-[31.2vw] items-center justify-between box-border border-0;
+}
 .sign-in6-login {
-    color: var(--purple-login)
-    }
+  @apply text-[color:var(--purple-login)];
+}
 .already-have-an-container6-login {
-    cursor: pointer;
-    text-decoration: none;
-    position: relative;
-    color: inherit
-    }
+  @apply cursor-pointer no-underline relative text-inherit;
+}
 .frame-parent42-login {
-    position: absolute;
-    top: 43.26vw;
-    left: 4.8vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-33xl-login);
-    font-size: var(--font-size-base-login)
-    }
+  @apply absolute flex flex-col items-center justify-start gap-[var(--gap-33xl-login)] text-[length:var(--font-size-base-login)] left-[4.8vw] top-[43.26vw];
+}
 .sign-up-as-institute1-login {
-    position: relative;
-    background-color: var(--color-white-login);
-    width: 100%;
-    height: 56.12vw;
-    overflow: hidden;
-    text-align: left;
-    font-size: var(--body-heavy-size-login);
-    color: var(--black-login);
-    font-family: var(--h1-heavy-login)
-    }
+  @apply relative bg-[color:var(--color-white-login)] w-full h-[56.12vw] overflow-hidden text-left text-[length:var(--body-heavy-size-login)] text-[color:var(--black-login)];
+  font-family: var(--h1-heavy-login);
+}
