--- a/src/components/SignUpAsInstitute2/SignUpAsInstitute2.css
+++ b/src/components/SignUpAsInstitute2/SignUpAsInstitute2.css
@@ -1,90 +1,53 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .password2-login {
-    position: relative
-    }
-.frame-child23-login, .password-container-login {
-    width: 31.2vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start
-    }
-.frame-child23-login {
-    border: 0.06vw solid var(--color-gainsboro-300-login);
+    @apply relative;
+  }
+  .frame-child23-login,
+  .password-container-login {
+    @apply w-[31.2vw] flex flex-row items-center justify-start;
+  }
+  .frame-child23-login {
+    @apply border-[color:var(--color-gainsboro-300-login)] text-[length:var(--body-heavy-size-login)] bg-transparent rounded-[var(--br-xs-login)] box-border justify-between pt-[var(--padding-base-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-base-login)] pl-[var(--padding-5xl-login)] border-[0.06vw] border-solid;
     font-family: var(--h1-heavy-login);
-    font-size: var(--body-heavy-size-login);
-    background-color: transparent;
-    border-radius: var(--br-xs-login);
-    box-sizing: border-box;
-    justify-content: space-between;
-    padding: var(--padding-base-login) var(--padding-5xl-login)
-    }
-.confirm-password-group-login, .frame-parent43-login, .frame-wrapper29-login {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.confirm-password-group-login, .frame-parent43-login {
-    gap: var(--gap-5xs-login)
-    }
-.frame-parent43-login {
-    position: absolute;
-    top: 18.91vw;
-    left: 4.8vw;
-    gap: var(--gap-7xl-login)
-    }
-.continue6-login {
-    position: relative;
-    font-size: var(--body-heavy-size-login);
+  }
+  .confirm-password-group-login,
+  .frame-parent43-login,
+  .frame-wrapper29-login {
+    @apply flex flex-col items-start justify-start;
+  }
+  .confirm-password-group-login,
+  .frame-parent43-login {
+    @apply gap-[var(--gap-5xs-login)];
+  }
+  .frame-parent43-login {
+    @apply absolute gap-[var(--gap-7xl-login)] left-[4.8vw] top-[18.91vw];
+  }
+  .continue6-login {
+    @apply relative text-[length:var(--body-heavy-size-login)] text-[color:var(--color-white-login)] text-left;
     font-family: var(--h1-heavy-login);
-    color: var(--color-white-login);
-    text-align: left
-    }
-.continue-wrapper4-login, .frame-wrapper30-login {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center
-    }
-.frame-wrapper30-login {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-xl-login) var(--padding-5xl-login);
-    background-color: var(--purple-login);
-    border-radius: var(--br-xs-login);
-    width: 31.2vw;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box
-    }
-.sign-in7-login {
-    color: var(--purple-login)
-    }
-.already-have-an-container7-login {
-    cursor: pointer;
-    text-decoration: none;
-    position: relative;
-    color: inherit
-    }
-.frame-parent45-login {
-    position: absolute;
-    top: 43.26vw;
-    left: 4.8vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-33xl-login);
-    font-size: var(--font-size-base-login)
-    }
-.sign-up-as-institute2-login {
-    position: relative;
-    background-color: var(--color-white-login);
-    width: 100%;
-    height: 56.12vw;
-    overflow: hidden;
-    text-align: left;
-    font-size: var(--body-heavy-size-login);
-    color: var(--black-login);
-    font-family: var(--h1-heavy-login)
-    }
+  }
+  .continue-wrapper4-login,
+  .frame-wrapper30-login {
+    @apply flex flex-row items-end justify-center;
+  }
+  .frame-wrapper30-login {
+    @apply cursor-pointer pt-[var(--padding-xl-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-xl-login)] pl-[var(--padding-5xl-login)] bg-[color:var(--purple-login)] rounded-[var(--br-xs-login)] w-[31.2vw] items-center justify-between box-border border-0;
+  }
+  .sign-in7-login {
+    @apply text-[color:var(--purple-login)];
+  }
+  .already-have-an-container7-login {
+    @apply cursor-pointer no-underline relative text-inherit;
+  }
+  .frame-parent45-login {
+    @apply absolute flex flex-col items-center justify-start gap-[var(--gap-33xl-login)] text-[length:var(--font-size-base-login)] left-[4.8vw] top-[43.26vw];
+  }
+  .sign-up-as-institute2-login {
+    @apply relative bg-[color:var(--color-white-login)] w-full h-[56.12vw] overflow-hidden text-left text-[length:var(--body-heavy-size-login)] text-[color:var(--black-login)];
+    font-family: var(--h1-heavy-login);
+  }
+  
