--- a/src/components/SignUpSelect/SignUpSelect.css
+++ b/src/components/SignUpSelect/SignUpSelect.css
@@ -1,45 +1,17 @@
 .material-symbolsperson-outlin-icon-login {
-    position: relative;
-    width: 2.52vw;
-    height: 2.52vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.as-an-individual-login {
-    position: relative;
-    font-size: var(--font-size-5xl-login);
+    @apply relative w-[2.52vw] h-[2.52vw] overflow-hidden shrink-0;
+  }
+  .as-an-individual-login {
+    @apply relative text-[length:var(--font-size-5xl-login)] text-[color:var(--color-white-login)] text-left;
     font-family: var(--h1-heavy-login);
-    color: var(--color-white-login);
-    text-align: left
-    }
-.material-symbolsperson-outlin-parent-login {
-    position: absolute;
-    top: 1.66vw;
-    left: 1.2vw;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-base-login)
-    }
-.teenyiconstick-circle-solid2-login {
-    position: absolute;
-    top: 0.91vw;
-    left: 12.39vw;
-    width: 1.6vw;
-    height: 1.6vw;
-    overflow: hidden
-    }
-.frame-parent52-login {
-    cursor: pointer;
-    border: 0.12vw solid var(--purple-login);
-    padding: 0;
-    background-color: var(--purple-login);
-    position: relative;
-    border-radius: var(--br-xs-login);
-    box-sizing: border-box;
-    width: 14.91vw;
-    height: 8.4vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
+  }
+  .material-symbolsperson-outlin-parent-login {
+    @apply absolute flex flex-col items-start justify-start gap-[var(--gap-base-login)] left-[1.2vw] top-[1.66vw];
+  }
+  .teenyiconstick-circle-solid2-login {
+    @apply absolute w-[1.6vw] h-[1.6vw] overflow-hidden left-[12.39vw] top-[0.91vw];
+  }
+  .frame-parent52-login {
+    @apply cursor-pointer border-[color:var(--purple-login)] bg-[color:var(--purple-login)] relative rounded-[var(--br-xs-login)] box-border w-[14.91vw] h-[8.4vw] overflow-hidden shrink-0 p-0 border-[0.12vw] border-solid;
+  }
+  
