--- a/src/pages/AdminTest/AdminTest.css
+++ b/src/pages/AdminTest/AdminTest.css
@@ -1,125 +1,48 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .active-tests {
-    position: relative;
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-    font-weight: bold;
-    }
-.active-tests-wrapper {
-    position: absolute;
-    top: 1.59vw;
-    left: 1.59vw;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.vector-icon11 {
-    position: absolute;
-    height: 1.44%;
-    width: 5.5%;
-    top: 20.16%;
-    right: 7.94%;
-    bottom: 78.4%;
-    left: 86.56%;
-    max-width: 100%;
-    overflow: hidden;
-    max-height: 100%
-    }
-.company-logo-icon {
-    position: absolute;
-    top: 3.97vw;
-    left: calc(50% - 3.9vw);
-    width: 7.8vw;
-    height: 3.44vw;
-    overflow: hidden
-    }
-.frame-icon, .vector-group {
-    position: relative;
-    border-radius: var(--br-base);
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.vector-group {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: var(--white);
-    box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.1vw 0 rgba(0, 0, 0, 0.1), 0 0.2vw 0 #605bff;
-    width: 22.2vw;
-    height: 12.04vw;
-    overflow: hidden;
-    flex-shrink: 0;
-    top: 0.08vw;
-    margin-bottom: 1vw;
-    margin-left: 0.08vw;
-    }
-.frame-icon {
-    width: 23.28vw;
-    height: 12.37vw
-    }
-.frame-parent37 {
-    position: absolute;
-    top: 6.08vw;
-    left: 1.59vw;
-    width: 74.41vw;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-13xl);
-    overflow:auto;
-    max-height:50vw;
-    }
-.icbaseline-plus-icon1 {
-    position: relative;
-    width: 1.32vw;
-    height: 1.32vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.add-new-test1 {
-    position: relative;
-    font-size: 1.05vw;
+    @apply relative tracking-[-0.02em] leading-[2.78vw] font-[bold];
+  }
+  .active-tests-wrapper {
+    @apply absolute flex flex-col items-start justify-start left-[1.59vw] top-[1.59vw];
+  }
+  .vector-icon11 {
+    @apply absolute h-[1.44%] w-[5.5%] max-w-full overflow-hidden max-h-full left-[86.56%] right-[7.94%] top-[20.16%] bottom-[78.4%];
+  }
+  .company-logo-icon {
+    @apply absolute left-[calc(50%_-_3.9vw)] w-[7.8vw] h-[3.44vw] overflow-hidden top-[3.97vw];
+  }
+  .frame-icon,
+  .vector-group {
+    @apply relative rounded-[var(--br-base)] overflow-hidden shrink-0;
+  }
+  .vector-group {
+    @apply cursor-pointer bg-[color:var(--white)] shadow-[-0.13vw_0_0_rgba(0,0,0,0.1),0.13vw_-0.1vw_0_rgba(0,0,0,0.1),0_0.2vw_0_#605bff] w-[22.2vw] h-[12.04vw] overflow-hidden shrink-0 ml-[0.08vw] mb-[1vw] p-0 border-0 top-[0.08vw];
+  }
+  .frame-icon {
+    @apply w-[23.28vw] h-[12.37vw];
+  }
+  .frame-parent37 {
+    @apply absolute w-[74.41vw] flex flex-row flex-wrap items-start justify-start gap-[var(--gap-13xl)] overflow-auto max-h-[50vw] left-[1.59vw] top-[6.08vw];
+  }
+  .icbaseline-plus-icon1 {
+    @apply relative w-[1.32vw] h-[1.32vw] overflow-hidden shrink-0;
+  }
+  .add-new-test1 {
+    @apply relative text-[1.05vw] text-[color:var(--white)] text-left font-[bold];
     font-family: var(--font-avenir-lt-std);
-    color: var(--white);
-    text-align: left;
-    font-weight: bold;
-    }
-.icbaseline-plus-group {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-xs) var(--padding-5xl);
-    background-color: var(--purple);
-    position: absolute;
-    top: 1.32vw;
-    left: 63.43vw;
-    border-radius: var(--br-5xs);
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: var(--gap-7xs)
-    }
-.frame-parent36 {
-    position: absolute;
-    top: 9.13vw;
-    left: 21.03vw;
-    border-radius: var(--br-base);
-    background-color: var(--white);
-    width: 76.59vw;
-    height: 53.7vw;
-    max-height:50vw;
-    }
-.admintest {
-    position: relative;
-    background-color: var(--color-ghostwhite-100);
-    width: 100%;
-    height: 64.95vw;
-    overflow: hidden;
-    text-align: left;
-    font-size: var(--font-size-9xl);
-    color: var(--black);
-    font-family: var(--font-avenir-lt-std)
-    }
+  }
+  .icbaseline-plus-group {
+    @apply cursor-pointer pt-[var(--padding-xs)] pr-[var(--padding-5xl)] pb-[var(--padding-xs)] pl-[var(--padding-5xl)] bg-[color:var(--purple)] absolute rounded-[var(--br-5xs)] overflow-hidden flex flex-row items-center justify-center gap-[var(--gap-7xs)] border-0 left-[63.43vw] top-[1.32vw];
+  }
+  .frame-parent36 {
+    @apply absolute rounded-[var(--br-base)] bg-[color:var(--white)] w-[76.59vw] h-[53.7vw] max-h-[50vw] left-[21.03vw] top-[9.13vw];
+  }
+  .admintest {
+    @apply relative bg-[color:var(--color-ghostwhite-100)] w-full h-[64.95vw] overflow-hidden text-left text-[length:var(--font-size-9xl)] text-[color:var(--black)];
+    font-family: var(--font-avenir-lt-std);
+  }
+  
