--- a/src/pages/ScheduleIteration1/ScheduleIteration1.css
+++ b/src/pages/ScheduleIteration1/ScheduleIteration1.css
@@ -1,387 +1,170 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .schedule {
-  position: relative;
-  letter-spacing: -0.02em;
-  line-height: 2.78vw;
-  font-weight: bold;
+  @apply relative tracking-[-0.02em] leading-[2.78vw] font-[bold];
 }
 .schedule-wrapper {
-  position: absolute;
-  top: 1.59vw;
-  left: 1.59vw;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  @apply absolute flex flex-col items-start justify-start left-[1.59vw] top-[1.59vw];
 }
 .frame-child61 {
-  position: relative;
-  width: 1.85vw;
-  height: 1.85vw;
+  @apply relative w-[1.85vw] h-[1.85vw];
 }
 .group-parent {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 16.2vw;
-  z-index: 0;
+  @apply flex flex-row items-start justify-start gap-[16.2vw] z-0;
 }
 .frame-child64 {
-  position: absolute;
-  margin: 0 !important;
-  top: -0.03vw;
-  left: -0.03vw;
-  border-top: 0.07vw dashed var(--icon-grey);
-  box-sizing: border-box;
-  width: 15.28vw;
-  height: 0.07vw;
-  opacity: 0.5;
-  z-index: 0;
+  @apply absolute top-[-0.03vw] left-[-0.03vw] border-t-[color:var(--icon-grey)] box-border w-[15.28vw] h-[0.07vw] opacity-50 z-0 m-0 border-t-[0.07vw] border-dashed;
 }
 .frame-child65,
 .line-parent5 {
-  margin: 0 !important;
-  position: absolute;
-  z-index: 1;
+  @apply absolute z-[1] m-0;
 }
 .frame-child65 {
-  top: -0.03vw;
-  left: 18.29vw;
-  border-top: 0.07vw dashed var(--icon-grey);
-  box-sizing: border-box;
-  width: 15.28vw;
-  height: 0.07vw;
-  opacity: 0.5;
+  @apply top-[-0.03vw] border-t-[color:var(--icon-grey)] box-border w-[15.28vw] h-[0.07vw] opacity-50 border-t-[0.07vw] border-dashed left-[18.29vw];
 }
 .line-parent5 {
-  top: 0.93vw;
-  left: 2.12vw;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: var(--padding-3xs);
-  gap: var(--gap-3xs);
+  @apply flex flex-row items-start justify-start pt-[var(--padding-3xs)] pr-[var(--padding-3xs)] pb-[var(--padding-3xs)] pl-[var(--padding-3xs)] gap-[var(--gap-3xs)] left-[2.12vw] top-[0.93vw];
 }
 .frame-child66,
 .frame-parent95 {
-  transform: rotate(90deg);
-  transform-origin: 0 0;
+  @apply rotate-90 origin-[0_0];
 }
 .frame-parent95 {
-  position: absolute;
-  top: 0.4vw;
-  left: 1.85vw;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-3xs);
+  @apply absolute flex flex-col items-start justify-start gap-[var(--gap-3xs)] left-[1.85vw] top-[0.4vw];
 }
 .frame-child66 {
-  position: relative;
-  border-radius: 50%;
-  background-color: var(--incomplete);
-  width: 0.4vw;
-  height: 0.4vw;
+  @apply relative bg-[color:var(--incomplete)] w-[0.4vw] h-[0.4vw] rounded-[50%];
 }
 .ellipse-container,
 .ellipse-group {
-  position: absolute;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: var(--gap-32xl);
+  @apply absolute flex-col justify-start gap-[var(--gap-32xl)];
 }
 .ellipse-group {
-  top: 4.7vw;
-  left: 0.79vw;
-  display: flex;
-  align-items: flex-start;
+  @apply flex items-start left-[0.79vw] top-[4.7vw];
 }
 .ellipse-container {
-  top: 22.49vw;
-  left: 0.73vw;
+  @apply left-[0.73vw] top-[22.49vw];
 }
 .ellipse-container,
 .tests-parent,
 .tue-parent {
-  display: flex;
-  align-items: flex-start;
+  @apply flex items-start;
 }
 .tests-parent {
-  position: absolute;
-  top: 0;
-  left: 2.78vw;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 15.34vw;
+  @apply absolute flex-col justify-start gap-[15.34vw] left-[2.78vw] top-0;
 }
 .tue-parent {
-  flex-direction: row;
-  justify-content: center;
-  gap: var(--gap-9xs);
+  @apply flex-row justify-center gap-[var(--gap-9xs)];
 }
 .test-2-wrapper {
-  position: relative;
-  border-radius: var(--br-3xs);
-  background-color: var(--color-darkorange);
-  width: 24.47vw;
-  height: 2.58vw;
-  overflow: hidden;
-  flex-shrink: 0;
-  color: var(--white);
+  @apply relative rounded-[var(--br-3xs)] bg-[color:var(--color-darkorange)] w-[24.47vw] h-[2.58vw] overflow-hidden shrink-0 text-[color:var(--white)];
 }
 .frame-parent98 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
+  @apply flex flex-row items-center justify-start gap-[px] grid grid-cols-[repeat(2,1fr)];
   /* gap: var(--gap-9xl); */
-
-  gap: px;
 }
 .frame-parent97 {
-  flex-direction: column;
-  align-items: flex-start;
+  @apply flex-col items-start grid grid-cols-[1fr] gap-[15px];
   /* gap: var(--gap-base); */
 }
-
 .frame-parent97 {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 15px; /* As each frame-parent98 is a row */
+  /* As each frame-parent98 is a row */
 }
-
 .frame-parent98 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Three columns for each child */
+  /* Three columns for each child */
 }
-
 .view-more2 {
-  position: relative;
-  font-size: var(--font-size-sm);
-  letter-spacing: -0.02em;
-  line-height: 2.78vw;
+  @apply relative text-[length:var(--font-size-sm)] tracking-[-0.02em] leading-[2.78vw] text-[color:var(--icon-grey)] text-left;
   font-family: var(--font-avenir-lt-std);
-  color: var(--icon-grey);
-  text-align: left;
 }
 .riarrow-drop-down-line-icon2 {
-  position: relative;
-  width: 1.32vw;
-  height: 1.32vw;
-  overflow: hidden;
-  flex-shrink: 0;
+  @apply relative w-[1.32vw] h-[1.32vw] overflow-hidden shrink-0;
 }
 .view-more-container {
-  cursor: pointer;
-  border: 0;
-  padding: 0;
-  background-color: transparent;
-  width: 23.88vw;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: var(--gap-9xs);
+  @apply cursor-pointer bg-transparent w-[23.88vw] flex flex-row items-center justify-center gap-[var(--gap-9xs)] p-0 border-0;
 }
 .frame-parent101,
 .frame-parent96 {
-  position: absolute;
-  top: 3.44vw;
-  left: 2.78vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  gap: var(--gap-base);
+  @apply absolute flex flex-col items-center justify-start gap-[var(--gap-base)] left-[2.78vw] top-[3.44vw];
 }
 .frame-parent101 {
-  top: 21.3vw;
-  left: 2.84vw;
+  @apply left-[2.84vw] top-[21.3vw];
 }
 .amazons-interview {
-  position: absolute;
-  top: calc(50% - 1.32vw);
-  left: 1.72vw;
-  letter-spacing: -0.02em;
-  line-height: 2.78vw;
+  @apply absolute top-[calc(50%_-_1.32vw)] tracking-[-0.02em] leading-[2.78vw] left-[1.72vw];
 }
 .amazons-interview-wrapper {
-  position: relative;
-  border-radius: var(--br-3xs);
-  background-color: var(--color-mediumseagreen);
-  width: 24.47vw;
-  height: 2.58vw;
-  overflow: hidden;
-  flex-shrink: 0;
-  color: var(--white);
+  @apply relative rounded-[var(--br-3xs)] bg-[color:var(--color-mediumseagreen)] w-[24.47vw] h-[2.58vw] overflow-hidden shrink-0 text-[color:var(--white)];
 }
 .frame-parent106 {
-  position: absolute;
-  top: 40.34vw;
-  left: 2.84vw;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: var(--gap-9xl);
-  overflow: hidden;
+  @apply absolute flex flex-row items-center justify-start gap-[var(--gap-9xl)] overflow-hidden left-[2.84vw] top-[40.34vw];
 }
 .frame-parent94 {
-  position: absolute;
-  top: 6.28vw;
-  left: 2.98vw;
-  width: 32.94vw;
-  height: 43.12vw;
-  font-size: var(--font-size-xl);
-  color: var(--color-gray-200);
+  @apply absolute w-[32.94vw] h-[43.12vw] text-[length:var(--font-size-xl)] text-[color:var(--color-gray-200)] left-[2.98vw] top-[6.28vw];
 }
 .frame-parent93 {
-  position: absolute;
-  top: 9.39vw;
-  left: 21.03vw;
-  border-radius: var(--br-base);
-  background-color: var(--white);
-  width: 39.75vw;
-  height: 53.7vw;
+  @apply absolute rounded-[var(--br-base)] bg-[color:var(--white)] w-[39.75vw] h-[53.7vw] left-[21.03vw] top-[9.39vw];
 }
 .days-remaining-5 {
-  position: relative;
+  @apply relative;
 }
 .days-remaining-5-wrapper {
-  border-radius: var(--br-5xs);
-  background-color: var(--color-crimson-100);
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: var(--padding-base) var(--padding-xl);
+  @apply rounded-[var(--br-5xs)] bg-[color:var(--color-crimson-100)] overflow-hidden flex flex-row items-center justify-center pt-[var(--padding-base)] pr-[var(--padding-xl)] pb-[var(--padding-base)] pl-[var(--padding-xl)];
 }
 .schedule-iteration-1-inner {
-  position: absolute;
-  top: 10.58vw;
-  left: 48.21vw;
-  border-radius: var(--br-xs);
-  border: 0.1vw solid #e94664;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  font-size: var(--font-size-base);
-  color: var(--danger);
+  @apply absolute rounded-[var(--br-xs)] flex flex-row items-start justify-start text-[length:var(--font-size-base)] text-[color:var(--danger)] border-[0.1vw] border-solid border-[#e94664] left-[48.21vw] top-[10.58vw];
 }
 .tips {
-  position: absolute;
-  top: 1.32vw;
-  left: 1.32vw;
-  letter-spacing: -0.02em;
-  line-height: 2.78vw;
-  font-weight: bold;
+  @apply absolute tracking-[-0.02em] leading-[2.78vw] font-[bold] left-[1.32vw] top-[1.32vw];
 }
 .they-were-able1 {
-  position: relative;
-  font-size: var(--font-size-base);
-  letter-spacing: -0.02em;
-  line-height: 1.59vw;
-  color: var(--icon-grey);
-  display: inline-block;
-  width: 30.22vw;
+  @apply relative text-[length:var(--font-size-base)] tracking-[-0.02em] leading-[1.59vw] text-[color:var(--icon-grey)] inline-block w-[30.22vw];
 }
 .mentor-remarks-parent {
-  width: 30.03vw;
-  height: 9.66vw;
+  @apply w-[30.03vw] h-[9.66vw];
 }
 .frame-wrapper48,
 .mentor-remarks-parent,
 .technical-proficiency-group {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  @apply flex flex-col items-start justify-start;
 }
 .frame-wrapper48 {
-  border-radius: var(--br-xs);
-  background-color: var(--color-ghostwhite-200);
-  width: 32.28vw;
-  overflow: hidden;
-  padding: var(--padding-xl) var(--padding-sm);
-  box-sizing: border-box;
+  @apply rounded-[var(--br-xs)] bg-[color:var(--color-ghostwhite-200)] w-[32.28vw] overflow-hidden pt-[var(--padding-xl)] pr-[var(--padding-sm)] pb-[var(--padding-xl)] pl-[var(--padding-sm)] box-border;
 }
 .technical-proficiency-group {
-  width: 30.03vw;
-  height: 7.54vw;
+  @apply w-[30.03vw] h-[7.54vw];
 }
 .company-logo-icon13,
 .company-logo-icon14 {
-  position: relative;
-  width: 4.96vw;
-  height: 1.92vw;
-  overflow: hidden;
-  flex-shrink: 0;
+  @apply relative w-[4.96vw] h-[1.92vw] overflow-hidden shrink-0;
 }
 .company-logo-icon14 {
-  width: 7.47vw;
-  height: 2.12vw;
+  @apply w-[7.47vw] h-[2.12vw];
 }
 .company-logo-parent10 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: var(--gap-13xl);
+  @apply flex flex-row items-center justify-start gap-[var(--gap-13xl)];
 }
 .companies-with-similar-benchma-parent {
-  width: 29.76vw;
-  height: 6.15vw;
-  gap: var(--gap-xs);
+  @apply w-[29.76vw] h-[6.15vw] gap-[var(--gap-xs)];
 }
 .companies-with-similar-benchma-parent,
 .frame-parent107,
 .frame-wrapper51 {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  @apply flex flex-col items-start justify-start;
 }
 .frame-wrapper51 {
-  border-radius: var(--br-base);
-  background-color: var(--color-ghostwhite-200);
-  width: 32.28vw;
-  height: 8.86vw;
-  overflow: hidden;
-  flex-shrink: 0;
-  padding: var(--padding-base) 1.39vw;
-  box-sizing: border-box;
+  @apply rounded-[var(--br-base)] bg-[color:var(--color-ghostwhite-200)] w-[32.28vw] h-[8.86vw] overflow-hidden shrink-0 pt-[var(--padding-base)] pb-[var(--padding-base)] box-border px-[1.39vw];
 }
 .frame-parent107 {
-  position: absolute;
-  top: 4.89vw;
-  left: 1.32vw;
-  gap: var(--gap-base);
-  font-size: var(--font-size-xl);
+  @apply absolute gap-[var(--gap-base)] text-[length:var(--font-size-xl)] left-[1.32vw] top-[4.89vw];
 }
 .tips-parent {
-  position: absolute;
-  top: 9.46vw;
-  left: 62.37vw;
-  border-radius: var(--br-base);
-  background-color: var(--white);
-  width: 35.25vw;
-  height: 53.64vw;
-  overflow: hidden;
-  font-size: var(--font-size-5xl);
-  color: var(--color-darkslategray-200);
+  @apply absolute rounded-[var(--br-base)] bg-[color:var(--white)] w-[35.25vw] h-[53.64vw] overflow-hidden text-[length:var(--font-size-5xl)] text-[color:var(--color-darkslategray-200)] left-[62.37vw] top-[9.46vw];
 }
 .schedule-iteration-1 {
-  position: relative;
-  background-color: var(--color-ghostwhite-100);
-  width: 100%;
-  height: 64.95vw;
-  overflow: hidden;
-  text-align: left;
-  font-size: var(--font-size-9xl);
-  color: var(--black);
+  @apply relative bg-[color:var(--color-ghostwhite-100)] w-full h-[64.95vw] overflow-hidden text-left text-[length:var(--font-size-9xl)] text-[color:var(--black)];
   font-family: var(--font-avenir-lt-std);
 }
