--- a/src/pages/SettingsInterviewer/SettingsInterviewer.css
+++ b/src/pages/SettingsInterviewer/SettingsInterviewer.css
@@ -1,241 +1,130 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .my-profile1 {
-    position: relative
-    }
-.my-profile-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: var(--br-16xl);
-    background-color: var(--color-mediumslateblue-200);
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding: var(--padding-xs) var(--padding-base)
-    }
-.frame-child1, .frame-parent5 {
-    position: absolute;
-    top: 4.5vw;
-    left: 1.06vw
-    }
-.frame-parent5 {
-    top: 3.17vw;
-    left: 2.65vw;
-    width: 8.47vw;
-    height: 6.08vw;
-    color: var(--purple)
-    }
-.my-profile2, .name, .priyanshu-gupta {
-    letter-spacing: -0.02em;
-    line-height: 2.78vw
-    }
-.my-profile2 {
-    position: absolute;
-    top: 2.12vw;
-    left: 19.18vw;
-    font-size: var(--font-size-5xl)
-    }
-.name, .priyanshu-gupta {
-    position: relative
-    }
-.priyanshu-gupta {
-    color: var(--icon-grey)
-    }
-.name-parent {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.change-password1 {
-    position: relative;
-    font-size: var(--font-size-sm);
-    text-decoration: underline;
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-    color: var(--icon-grey)
-    }
-.password-parent {
-    width: 20.04vw;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between
-    }
-.div1 {
-    position: absolute;
-    top: -0.26vw;
-    left: 0;
-    letter-spacing: -0.02em;
-    line-height: 2.78vw
-    }
-.carbonview-off-icon {
-    position: absolute;
-    top: 0.73vw;
-    left: 18.19vw;
-    width: 1.32vw;
-    height: 1.32vw;
-    overflow: hidden
-    }
-.parent {
-    position: relative;
-    width: 20.04vw;
-    height: 2.78vw;
-    margin-top: -0.26vw;
-    font-size: var(--font-size-17xl);
-    color: var(--icon-grey)
-    }
-.frame-parent7, .frame-parent8 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.frame-parent8 {
-    width: 20.04vw
-    }
-.frame-parent7 {
-    gap: var(--gap-lg)
-    }
-.machine-learning {
-    position: relative;
-    display: inline-block;
-    width: 7.21vw;
-    height: 0.99vw;
-    flex-shrink: 0
-    }
-.machine-learning-wrapper {
-    border-radius: var(--br-5xl);
-    border: 0.07vw solid var(--purple);
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center;
-    padding: var(--padding-6xs) var(--padding-2xs)
-    }
-.frame-parent10, .skills-parent {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.frame-parent10 {
-    width: 20.24vw;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: var(--gap-xs);
-    font-size: var(--font-size-sm);
-    color: var(--purple)
-    }
-.skills-parent {
-    flex-direction: column;
-    gap: var(--gap-9xs)
-    }
-.delete-account, .this-will-permanently {
-    position: relative;
-    font-size: var(--font-size-base)
-    }
-.this-will-permanently {
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-    color: var(--icon-grey);
-    margin-top: -0.26vw
-    }
-.delete-account {
+    @apply relative;
+  }
+  .my-profile-wrapper {
+    @apply absolute rounded-[var(--br-16xl)] bg-[color:var(--color-mediumslateblue-200)] flex flex-row items-start justify-start pt-[var(--padding-xs)] pr-[var(--padding-base)] pb-[var(--padding-xs)] pl-[var(--padding-base)] left-0 top-0;
+  }
+  .frame-child1,
+  .frame-parent5 {
+    @apply absolute left-[1.06vw] top-[4.5vw];
+  }
+  .frame-parent5 {
+    @apply w-[8.47vw] h-[6.08vw] text-[color:var(--purple)] left-[2.65vw] top-[3.17vw];
+  }
+  .my-profile2,
+  .name,
+  .priyanshu-gupta {
+    @apply tracking-[-0.02em] leading-[2.78vw];
+  }
+  .my-profile2 {
+    @apply absolute text-[length:var(--font-size-5xl)] left-[19.18vw] top-[2.12vw];
+  }
+  .name,
+  .priyanshu-gupta {
+    @apply relative;
+  }
+  .priyanshu-gupta {
+    @apply text-[color:var(--icon-grey)];
+  }
+  .name-parent {
+    @apply flex flex-col items-start justify-start;
+  }
+  .change-password1 {
+    @apply relative text-[length:var(--font-size-sm)] underline tracking-[-0.02em] leading-[2.78vw] text-[color:var(--icon-grey)];
+  }
+  .password-parent {
+    @apply w-[20.04vw] flex flex-row items-start justify-between;
+  }
+  .div1 {
+    @apply absolute top-[-0.26vw] tracking-[-0.02em] leading-[2.78vw] left-0;
+  }
+  .carbonview-off-icon {
+    @apply absolute w-[1.32vw] h-[1.32vw] overflow-hidden left-[18.19vw] top-[0.73vw];
+  }
+  .parent {
+    @apply relative w-[20.04vw] h-[2.78vw] mt-[-0.26vw] text-[length:var(--font-size-17xl)] text-[color:var(--icon-grey)];
+  }
+  .frame-parent7,
+  .frame-parent8 {
+    @apply flex flex-col items-start justify-start;
+  }
+  .frame-parent8 {
+    @apply w-[20.04vw];
+  }
+  .frame-parent7 {
+    @apply gap-[var(--gap-lg)];
+  }
+  .machine-learning {
+    @apply relative inline-block w-[7.21vw] h-[0.99vw] shrink-0;
+  }
+  .machine-learning-wrapper {
+    @apply rounded-[var(--br-5xl)] border-[color:var(--purple)] overflow-hidden flex flex-row items-end justify-center pt-[var(--padding-6xs)] pr-[var(--padding-2xs)] pb-[var(--padding-6xs)] pl-[var(--padding-2xs)] border-[0.07vw] border-solid;
+  }
+  .frame-parent10,
+  .skills-parent {
+    @apply flex items-start justify-start;
+  }
+  .frame-parent10 {
+    @apply w-[20.24vw] flex-row flex-wrap gap-[var(--gap-xs)] text-[length:var(--font-size-sm)] text-[color:var(--purple)];
+  }
+  .skills-parent {
+    @apply flex-col gap-[var(--gap-9xs)];
+  }
+  .delete-account,
+  .this-will-permanently {
+    @apply relative text-[length:var(--font-size-base)];
+  }
+  .this-will-permanently {
+    @apply tracking-[-0.02em] leading-[2.78vw] text-[color:var(--icon-grey)] mt-[-0.26vw];
+  }
+  .delete-account {
+    @apply text-[color:var(--danger)] text-left;
     font-family: var(--font-avenir-lt-std);
-    color: var(--danger);
-    text-align: left
-    }
-.delete-account-wrapper {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-4xs) var(--padding-xs);
-    background-color: var(--color-crimson-200);
-    border-radius: var(--br-5xs);
-    flex-direction: row
-    }
-.delete-account-wrapper, .frame-parent11, .frame-parent6 {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.frame-parent11 {
-    width: 20.24vw;
-    flex-direction: column;
-    gap: var(--gap-5xs)
-    }
-.frame-parent6 {
-    position: absolute;
-    top: 7.01vw;
-    left: 19.71vw;
-    flex-direction: row;
-    gap: var(--gap-118xl);
-    font-size: var(--font-size-lg)
-    }
-.tableredit-icon {
-    position: relative;
-    width: 1.06vw;
-    height: 1.06vw;
-    overflow: hidden;
-    flex-shrink: 0
-    }
-.edit {
-    position: relative;
-    font-size: var(--font-size-base);
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
+  }
+  .delete-account-wrapper {
+    @apply cursor-pointer pt-[var(--padding-4xs)] pr-[var(--padding-xs)] pb-[var(--padding-4xs)] pl-[var(--padding-xs)] bg-[color:var(--color-crimson-200)] rounded-[var(--br-5xs)] flex-row border-0;
+  }
+  .delete-account-wrapper,
+  .frame-parent11,
+  .frame-parent6 {
+    @apply flex items-start justify-start;
+  }
+  .frame-parent11 {
+    @apply w-[20.24vw] flex-col gap-[var(--gap-5xs)];
+  }
+  .frame-parent6 {
+    @apply absolute flex-row gap-[var(--gap-118xl)] text-[length:var(--font-size-lg)] left-[19.71vw] top-[7.01vw];
+  }
+  .tableredit-icon {
+    @apply relative w-[1.06vw] h-[1.06vw] overflow-hidden shrink-0;
+  }
+  .edit {
+    @apply relative text-[length:var(--font-size-base)] tracking-[-0.02em] leading-[2.78vw] text-[color:var(--icon-grey)] text-left;
     font-family: var(--font-avenir-lt-std);
-    color: var(--icon-grey);
-    text-align: left
-    }
-.tableredit-parent {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-5xs)
-    }
-.frame-wrapper7, .rectangle-group {
-    position: absolute;
-    background-color: var(--white)
-    }
-.frame-wrapper7 {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-9xs) var(--padding-base);
-    top: 1.85vw;
-    left: 68.85vw;
-    border-radius: var(--br-xs);
-    box-shadow: -0.13vw -0.13vw 0.13vw rgba(0, 0, 0, 0.08), 0.13vw 0.13vw 0.13vw rgba(0, 0, 0, 0.08);
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start
-    }
-.rectangle-group {
-    top: 14.29vw;
-    left: 21.03vw;
-    border-radius: var(--br-base);
-    width: 76.59vw;
-    height: 48.54vw;
-    overflow: hidden
-    }
-.settings2 {
-    position: absolute;
-    top: 10.45vw;
-    left: 21.03vw;
-    font-size: var(--font-size-9xl);
-    letter-spacing: -0.02em;
-    line-height: 2.78vw
-    }
-.settingsinterviewer {
-    position: relative;
-    background-color: var(--color-ghostwhite-100);
-    width: 100%;
-    height: 64.95vw;
-    overflow: hidden;
-    text-align: left;
-    font-size: var(--font-size-xl);
-    color: var(--black);
-    font-family: var(--font-avenir-lt-std)
-    }
+  }
+  .tableredit-parent {
+    @apply flex flex-row items-center justify-start gap-[var(--gap-5xs)];
+  }
+  .frame-wrapper7,
+  .rectangle-group {
+    @apply absolute bg-[color:var(--white)];
+  }
+  .frame-wrapper7 {
+    @apply cursor-pointer pt-[var(--padding-9xs)] pr-[var(--padding-base)] pb-[var(--padding-9xs)] pl-[var(--padding-base)] rounded-[var(--br-xs)] shadow-[-0.13vw_-0.13vw_0.13vw_rgba(0,0,0,0.08),0.13vw_0.13vw_0.13vw_rgba(0,0,0,0.08)] flex flex-row items-start justify-start border-0 left-[68.85vw] top-[1.85vw];
+  }
+  .rectangle-group {
+    @apply rounded-[var(--br-base)] w-[76.59vw] h-[48.54vw] overflow-hidden left-[21.03vw] top-[14.29vw];
+  }
+  .settings2 {
+    @apply absolute text-[length:var(--font-size-9xl)] tracking-[-0.02em] leading-[2.78vw] left-[21.03vw] top-[10.45vw];
+  }
+  .settingsinterviewer {
+    @apply relative bg-[color:var(--color-ghostwhite-100)] w-full h-[64.95vw] overflow-hidden text-left text-[length:var(--font-size-xl)] text-[color:var(--black)];
+    font-family: var(--font-avenir-lt-std);
+  }
+  
