--- a/src/pages/SignUpAs/SignUpAs.css
+++ b/src/pages/SignUpAs/SignUpAs.css
@@ -1,143 +1,83 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .cantileverlogoblack-2-parent-login {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-41xl-login);
+  @apply flex flex-col items-start justify-start gap-[var(--gap-41xl-login)];
 }
 .sign-up-login {
-  position: relative;
+  @apply relative;
 }
 .tdesigninstitution-icon-login {
-  position: relative;
-  width: 1.83vw;
-  height: 1.83vw;
-  overflow: hidden;
-  flex-shrink: 0;
+  @apply relative w-[1.83vw] h-[1.83vw] overflow-hidden shrink-0;
 }
 .tdesigninstitution-wrapper-login {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: 0.29vw;
+  @apply flex flex-row items-start justify-start p-[0.29vw];
 }
 .as-an-institution-login {
-  position: relative;
-  font-size: var(--font-size-5xl-login);
+  @apply relative text-[length:var(--font-size-5xl-login)] text-[color:var(--black-login)] text-left;
   font-family: var(--h1-heavy-login);
-  color: var(--black-login);
-  text-align: left;
 }
 .frame-div-login {
-  position: absolute;
-  top: 1.55vw;
-  left: 1.37vw;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-base-login);
+  @apply absolute flex flex-col items-start justify-start gap-[var(--gap-base-login)] left-[1.37vw] top-[1.55vw];
 }
-.frame-button-login, .frame-child-login {
-  border: 0.06vw solid var(--color-gainsboro-300-login);
-  box-sizing: border-box;
+.frame-button-login,
+.frame-child-login {
+  @apply border-[color:var(--color-gainsboro-300-login)] box-border border-[0.06vw] border-solid;
 }
 .frame-child-login {
-  position: absolute;
-  top: 0.91vw;
-  left: 12.39vw;
-  border-radius: 50%;
-  width: 1.60vw;
-  height: 1.60vw;
+  @apply absolute w-[1.60vw] h-[1.60vw] rounded-[50%] left-[12.39vw] top-[0.91vw];
 }
 .frame-button-login {
-  cursor: pointer;
-  padding: 0;
-  background-color: transparent;
-  position: relative;
-  border-radius: var(--br-xs-login);
-  width: 14.91vw;
-  height: 8.40vw;
-  overflow: hidden;
-  flex-shrink: 0;
+  @apply cursor-pointer bg-transparent relative rounded-[var(--br-xs-login)] w-[14.91vw] h-[8.40vw] overflow-hidden shrink-0 p-0;
 }
-.frame-container-login, .sign-up-parent-login {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+.frame-container-login,
+.sign-up-parent-login {
+  @apply flex items-start justify-start;
 }
 .frame-container-login {
-  flex-direction: row;
-  gap: 1.42vw;
+  @apply flex-row gap-[1.42vw];
 }
 .sign-up-parent-login {
-  flex-direction: column;
-  gap: var(--gap-base-login);
+  @apply flex-col gap-[var(--gap-base-login)];
 }
 .continue-as-individual-login {
-  position: relative;
-  font-size: var(--body-heavy-size-login);
+  @apply relative text-[length:var(--body-heavy-size-login)] text-[color:var(--color-white-login)] text-left;
   font-family: var(--h1-heavy-login);
-  color: var(--color-white-login);
-  text-align: left;
 }
-.continue-as-individual-wrapper-login, .frame-wrapper-login {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: center;
+.continue-as-individual-wrapper-login,
+.frame-wrapper-login {
+  @apply flex flex-row items-end justify-center;
 }
 .frame-wrapper-login {
-  cursor: pointer;
-  border: 0;
-  padding: var(--padding-xl-login) var(--padding-5xl-login);
-  background-color: var(--purple-login);
-  border-radius: var(--br-xs-login);
-  width: 31.20vw;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
+  @apply cursor-pointer pt-[var(--padding-xl-login)] pr-[var(--padding-5xl-login)] pb-[var(--padding-xl-login)] pl-[var(--padding-5xl-login)] bg-[color:var(--purple-login)] rounded-[var(--br-xs-login)] w-[31.20vw] items-center justify-between box-border border-0;
 }
 .sign-in-login {
-  color: var(--purple-login);
+  @apply text-[color:var(--purple-login)];
 }
 .already-have-an-container-login {
-  cursor: pointer;
-  text-decoration: none;
-  position: relative;
-  color: inherit;
+  @apply cursor-pointer no-underline relative text-inherit;
 }
-.frame-group-login, .frame-parent-login, .frame-parent1-login {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+.frame-group-login,
+.frame-parent-login,
+.frame-parent1-login {
+  @apply flex flex-col justify-start;
 }
 .frame-parent1-login {
-  align-items: center;
-  gap: var(--gap-33xl-login);
-  font-size: var(--font-size-base-login);
+  @apply items-center gap-[var(--gap-33xl-login)] text-[length:var(--font-size-base-login)];
 }
-.frame-group-login, .frame-parent-login {
-  align-items: flex-start;
+.frame-group-login,
+.frame-parent-login {
+  @apply items-start;
 }
 .frame-group-login {
-  gap: 13.37vw;
+  @apply gap-[13.37vw];
 }
 .frame-parent-login {
-  position: absolute;
-  top: 5.38vw;
-  left: 4.80vw;
-  gap: var(--gap-41xl-login);
+  @apply absolute gap-[var(--gap-41xl-login)] left-[4.80vw] top-[5.38vw];
 }
 .sign-up-as-login {
-  position: relative;
-  background-color: var(--color-white-login);
-  width: 100%;
-  height: 56.12vw;
-  overflow: hidden;
-  text-align: left;
-  font-size: var(--font-size-5xl-login);
-  color: var(--black-login);
+  @apply relative bg-[color:var(--color-white-login)] w-full h-[56.12vw] overflow-hidden text-left text-[length:var(--font-size-5xl-login)] text-[color:var(--black-login)];
   font-family: var(--h1-heavy-login);
 }
